links are updated

--- a/application/views/flat/3-Books/002.xhtml
+++ b/application/views/flat/3-Books/002.xhtml
@@ -1,43 +1,43 @@
 ﻿<div data-bcode="002">
 	<h1 class="title" data-language="kannada">ಬ್ರಾಹ್ಮಣರೇನು ಮಾಡಬೇಕು?</h1>
 	<ol>
-<li page="">ಪರಿವಿಡಿ</li>
-<li page="">ಭಾಗ -1: ಬ್ರಾಹ್ಮಣ್ಯ</li>
-<li page="">ಬ್ರಾಹ್ಮಣರೇನು ಮಾಡಬೇಕು ? </li>
-<li page="">-ಒಂದು ಪ್ರತಿಕ್ರಿಯೆ </li>
-<li page="">-ಪ್ರತಿಕ್ರಿಯೆಗಳಿಗೆ ಉತ್ತರ </li>
-<li page="">ಗೊಡ್ಡು ಬ್ರಾಹ್ಮಣ್ಯ ಮತ್ತು ಧೂರ್ತ ಚಾರ್ವಾಕ ಮತ (ಮತ್ತೊಂದು ಪ್ರತಿಕ್ರಿಯೆಗೆ ಉತ್ತರ) </li>
-<li page="">ಹಿಂದಿಲ್ಲ ಸ್ವಾಮಿ ಮುಂದಿಲ್ಲ (ಪಾವೆಂ ಅವರ ಹರಟೆಯ ರೂಪದ ಪ್ರತಿಕ್ರಿಯೆ)</li>
-<li page="">ಭಾಗ - 2: ಧಾರ್ಮಿಕ ನೆಲೆಯಲ್ಲಿ </li>
-<li page="">ನನ್ನ ದೃಷ್ಟಿಯಲ್ಲಿ ಧರ್ಮ </li>
-<li page="">ಗಣಪತಿಯ ಮೂಲಗಳು </li>
-<li page="">ದೈವ 'ನೊಂದೆ' ಎಂದಿತು. ಅದಕ್ಕೇ 'ಮಹಾಭಾರತ'ವಾಯಿತು </li>
-<li page="">ಧರ್ಮಸಂಕಟ  </li>
-<li page="">ಶಾಸ್ತ್ರವನ್ನು ಏಕೆ ಪಾಲಿಸಬೇಕು ?</li>
-<li page="">ಪ್ರತ್ಯಕ್ಷ; ಶಾಸ್ತ್ರ </li>
-<li page="">ಮಠಗಳು: ಅವು ಏನು ಮಾಡಬಲ್ಲವು ?</li>
-<li page="">ಭಾಗ - 3: ಚಿಂತನಪರ</li>
-<li page="">ಜೀವನಕ್ಕೆ ಅರ್ಥವುಂಟೆ ? </li>
-<li page="">ಬುದ್ದಿಜೀವಿ, ಸಮಾಜ ಮತ್ತು ಸಾಹಿತ್ಯ</li>
-<li page="">ಮಾನವ ಪ್ರವೃತ್ತಿ ಮತ್ತು ಮೌಲ್ಯಗಳು </li>
-<li page="">ಸುಖ ಬೇಕಾದರೆ ಪ್ರೀತಿ ಬೇಕು </li>
-<li page="">ಬೇಕು - ಪಾಪ ಪ್ರಜ್ಞೆ </li>
-<li page="">ಸ್ವಾರ್ಥ-ತ್ಯಾಗ ? ಎಲ್ಲ ಲೊಳಲೊಟ್ಟೆಯಂತೆ</li>
-<li page="">ಭಾಗ - 4: ವೈಚಾರಿಕ</li>
-<li page="">ಪ್ರಜ್ಞಾವಾದ: ದಿಟ ಮತ್ತು ಸಟೆ </li>
-<li page="">ಪ್ರಾಮಾಣಿಕತೆಯಲ್ಲಿ ಸುಖವಿದೆ </li>
-<li page="">ಕೃತಜ್ಞತೆ ಎಂಬ ಸದ್ಗುಣ </li>
-<li page="">ಅಹಿಂಸೆ, ಶಾಕಾಹಾರ ಇತ್ಯಾದಿ </li>
-<li page="">ಸಹಿಷ್ಣುತೆ </li>
-<li page="">ಆಜ್ಞಾಪಾಲನೆ ಮನುಷ್ಯ ಸ್ವಭಾವವೆ? </li>
-<li page="">'ನಾನು' ಹೋದರೆ ಸ್ವರ್ಗಕ್ಕೆ ಹೋಗಬಹುದು</li>
-<li page="">ಭಾಗ - 5: ಶೈಕ್ಷಣಿಕ </li>
-<li page="">ಶಿಕ್ಷಣ ಮತ್ತು ಜೀವನಮೌಲ್ಯಗಳು</li>
-<li page="">ಉಚ್ಚಶಿಕ್ಷಣ - ಒಂದು ಪ್ರತಿಕ್ರಿಯೆ </li>
-<li page="">ಸಂಸ್ಕೃತ ಶಿಕ್ಷಣ: ಹೊಸ ರೀತಿ ಬೇಕು</li>
-<li page="">ಯುವಕರೇನು ಮಾಡಬೇಕು ?</li>
-<li page="">ವಿದ್ಯಾರ್ಥಿಗಳು ಯೋಚಿಸಬೇಕು</li>
-<li page="">ನಮ್ಮ ಮಕ್ಕಳನ್ನು ನಾವು ಹೀಗೆ ಬಿಡಬೇಕೆ ?</li>
-<li page="">ಸಾಮಾಜಿಕ ಬದಲಾವಣೆ ಮತ್ತು ಸಾಮಾಜಿಕ ಮನೋವೃತ್ತಿಗಳು </li>
+<li page="0001-0001">ಪರಿವಿಡಿ</li>
+<li page="0001-0001">ಭಾಗ -1: ಬ್ರಾಹ್ಮಣ್ಯ</li>
+<li page="0001-0001">ಬ್ರಾಹ್ಮಣರೇನು ಮಾಡಬೇಕು ? </li>
+<li page="0001-0001">-ಒಂದು ಪ್ರತಿಕ್ರಿಯೆ </li>
+<li page="0001-0001">-ಪ್ರತಿಕ್ರಿಯೆಗಳಿಗೆ ಉತ್ತರ </li>
+<li page="0001-0001">ಗೊಡ್ಡು ಬ್ರಾಹ್ಮಣ್ಯ ಮತ್ತು ಧೂರ್ತ ಚಾರ್ವಾಕ ಮತ (ಮತ್ತೊಂದು ಪ್ರತಿಕ್ರಿಯೆಗೆ ಉತ್ತರ) </li>
+<li page="0001-0001">ಹಿಂದಿಲ್ಲ ಸ್ವಾಮಿ ಮುಂದಿಲ್ಲ (ಪಾವೆಂ ಅವರ ಹರಟೆಯ ರೂಪದ ಪ್ರತಿಕ್ರಿಯೆ)</li>
+<li page="0001-0001">ಭಾಗ - 2: ಧಾರ್ಮಿಕ ನೆಲೆಯಲ್ಲಿ </li>
+<li page="0001-0001">ನನ್ನ ದೃಷ್ಟಿಯಲ್ಲಿ ಧರ್ಮ </li>
+<li page="0001-0001">ಗಣಪತಿಯ ಮೂಲಗಳು </li>
+<li page="0001-0001">ದೈವ 'ನೊಂದೆ' ಎಂದಿತು. ಅದಕ್ಕೇ 'ಮಹಾಭಾರತ'ವಾಯಿತು </li>
+<li page="0001-0001">ಧರ್ಮಸಂಕಟ  </li>
+<li page="0001-0001">ಶಾಸ್ತ್ರವನ್ನು ಏಕೆ ಪಾಲಿಸಬೇಕು ?</li>
+<li page="0001-0001">ಪ್ರತ್ಯಕ್ಷ; ಶಾಸ್ತ್ರ </li>
+<li page="0001-0001">ಮಠಗಳು: ಅವು ಏನು ಮಾಡಬಲ್ಲವು ?</li>
+<li page="0001-0001">ಭಾಗ - 3: ಚಿಂತನಪರ</li>
+<li page="0001-0001">ಜೀವನಕ್ಕೆ ಅರ್ಥವುಂಟೆ ? </li>
+<li page="0001-0001">ಬುದ್ದಿಜೀವಿ, ಸಮಾಜ ಮತ್ತು ಸಾಹಿತ್ಯ</li>
+<li page="0001-0001">ಮಾನವ ಪ್ರವೃತ್ತಿ ಮತ್ತು ಮೌಲ್ಯಗಳು </li>
+<li page="0001-0001">ಸುಖ ಬೇಕಾದರೆ ಪ್ರೀತಿ ಬೇಕು </li>
+<li page="0001-0001">ಬೇಕು - ಪಾಪ ಪ್ರಜ್ಞೆ </li>
+<li page="0001-0001">ಸ್ವಾರ್ಥ-ತ್ಯಾಗ ? ಎಲ್ಲ ಲೊಳಲೊಟ್ಟೆಯಂತೆ</li>
+<li page="0001-0001">ಭಾಗ - 4: ವೈಚಾರಿಕ</li>
+<li page="0001-0001">ಪ್ರಜ್ಞಾವಾದ: ದಿಟ ಮತ್ತು ಸಟೆ </li>
+<li page="0001-0001">ಪ್ರಾಮಾಣಿಕತೆಯಲ್ಲಿ ಸುಖವಿದೆ </li>
+<li page="0001-0001">ಕೃತಜ್ಞತೆ ಎಂಬ ಸದ್ಗುಣ </li>
+<li page="0001-0001">ಅಹಿಂಸೆ, ಶಾಕಾಹಾರ ಇತ್ಯಾದಿ </li>
+<li page="0001-0001">ಸಹಿಷ್ಣುತೆ </li>
+<li page="0001-0001">ಆಜ್ಞಾಪಾಲನೆ ಮನುಷ್ಯ ಸ್ವಭಾವವೆ? </li>
+<li page="0001-0001">'ನಾನು' ಹೋದರೆ ಸ್ವರ್ಗಕ್ಕೆ ಹೋಗಬಹುದು</li>
+<li page="0001-0001">ಭಾಗ - 5: ಶೈಕ್ಷಣಿಕ </li>
+<li page="0001-0001">ಶಿಕ್ಷಣ ಮತ್ತು ಜೀವನಮೌಲ್ಯಗಳು</li>
+<li page="0001-0001">ಉಚ್ಚಶಿಕ್ಷಣ - ಒಂದು ಪ್ರತಿಕ್ರಿಯೆ </li>
+<li page="0001-0001">ಸಂಸ್ಕೃತ ಶಿಕ್ಷಣ: ಹೊಸ ರೀತಿ ಬೇಕು</li>
+<li page="0001-0001">ಯುವಕರೇನು ಮಾಡಬೇಕು ?</li>
+<li page="0001-0001">ವಿದ್ಯಾರ್ಥಿಗಳು ಯೋಚಿಸಬೇಕು</li>
+<li page="0001-0001">ನಮ್ಮ ಮಕ್ಕಳನ್ನು ನಾವು ಹೀಗೆ ಬಿಡಬೇಕೆ ?</li>
+<li page="0001-0001">ಸಾಮಾಜಿಕ ಬದಲಾವಣೆ ಮತ್ತು ಸಾಮಾಜಿಕ ಮನೋವೃತ್ತಿಗಳು </li>
 </ol>
 </div>
