--- a/application/views/flat/3-Books/003.xhtml
+++ b/application/views/flat/3-Books/003.xhtml
@@ -1,35 +1,35 @@
 ﻿<div data-bcode="003">
 	<h1 class="title" data-language="kannada">ಜಗದ್ವಿಖ್ಯಾತರು</h1>
 	<ol>
-<li page="">ಪರಿವಿಡಿ</li>
-<li page="">ಮಹಾ ದಾರ್ಶನಿಕ ಪ್ಲೇಟೋ</li>
-<li page="">ದ ವಿಂಚಿಯ ಸರ್ವತೋಮುಖ ಪ್ರತಿಭೆ </li>
-<li page="">ಡಾನ್ ಕ್ವಿಕ್ಸೋಟನ ಜನಕ ಸರ್ವಾಂಟಿಸ್ </li>
-<li page="">ಯುರೋಪಿನ ಕ್ರಾಂತಿದೂತ ರೂಸೊ </li>
-<li page="">ಸಂಗೀತದ ಬಾಲಾದ್ಭುತ - ಮೊಜಾರ್ಟ್ </li>
-<li page="">ವಿಕ್ಷಿಪ್ತ ಚಿತ್ರಕಾರ - ಹೊಕುಸಾಯಿ</li>
-<li page="">ಫ್ರೆಂಚ್ ಸಾಹಿತ್ಯ ಚಕ್ರವರ್ತಿ ವಿಕ್ಟರ್ ಹ್ಯೂಗೋ </li>
-<li page="">ಯುಗಪುರುಷ ಲೆನಿನ್ </li>
-<li page="">ಟ್ರಾಟ್‌ಸ್ಕಿಗೆ ಮರಣ ಬಂತು </li>
-<li page="">ಮಹಾಮುತ್ಸದ್ದಿ ಕ್ರುಶ್ಚೇವ್</li>
-<li page="">ಅಂಡರ್‌ಸನ್ - ಮಕ್ಕಳ ಕಥೆಗಳ ರಾಜ </li>
-<li page="">ಉಡಾಳ ಹುಡುಗ ಶ್ರೇಷ್ಠ ಸಾಹಿತಿಯಾದ (ಮಾರ್ಕ್ ಟ್ವೇನ್)</li>
-<li page="">ಐನ್‌ಸ್ಟೈನರ ಬಾಲ್ಯ ಜೀವನ </li>
-<li page="">ಕಲಾಪ್ರತಿಭೆಯ ಗಾಗಿನ್ </li>
-<li page="">ಕೋಟ್ಯಧೀಶ ಸಾಹಿತಿ - ಸಮರ್ಸೆಟ್  ಮಾಮ್</li>
-<li page="">ಮಹಾವಿಜ್ಞಾನಿ ಜಾನ್ ಬಾರ್ಡಿನ್ </li>
-<li page="">ಅನ್ಯಾಯದ ವಿರುದ್ಧ - ಎಮಿಲಿ ಜೋಲಾ</li>
-<li page="">ಶತಕೋಟಿ ದಾನಿ ಆಂಡ್ರೂ ಕಾರ್ನೆಜಿ </li>
-<li page="">ಧ್ಯೇಯವಾದೀ ಸಾಹಿತಿ - ಆಂದ್ರೆ ಮಲ್ರಾ</li>
-<li page="">ಡಾಕ್ಟರ್ ಆಲ್ಬರ್ಟ್ ಶ್ವೈತ್ಸರ್</li>
-<li page="">ಜಪಾನಿನ ವಿಚಿತ್ರ ಲೇಖಕ - ಮಿಶಿಮಾ </li>
-<li page="">ವಿಶ್ವಶಾಂತಿ ಸಾಧಕ ರಾಲ್ಫ್  ಬುಂಚ್ </li>
-<li page="">ದಕ್ಷಿಣ ಅಮೇರಿಕದ ಮಹಾಕವಿ - ಪಾಬ್ಲೊ ನೇರುದಾ </li>
-<li page="">ನಿರಾಶ್ರಿತರ ಆಶ್ರಯದಾತ : ಫಾದರ್ ಪಿಯರ್</li>
-<li page="">ಪಾಸ್ಟರ್‌ನಾಕ್ ಮತ್ತು ಅವರ ಕಾದಂಬರಿ </li>
-<li page="">ಅದೃಷ್ಟಹೀನ ರಾಜ ಲಿಯೊಪಾಲ್ಡ್ </li>
-<li page="">ಜಾರ್ಜ್ ಸ್ಯಾಂಡ್ - ಗಂಡು ಬದುಕಿನ ಹೆಣ್ಣು ಸಾಹಿತಿ</li>
-<li page="">ಕೆನ್ಯಾ ದೇಶದ ಸ್ವಾತಂತ್ರ್ಯ ಯೋಧರು </li>
-<li page="">ಚದುರಂಗ ಚಕ್ರವರ್ತಿ - ಬಾಬಿ ಫಿಷರ್</li>
+<li page="0001-0001">ಪರಿವಿಡಿ</li>
+<li page="0001-0001">ಮಹಾ ದಾರ್ಶನಿಕ ಪ್ಲೇಟೋ</li>
+<li page="0001-0001">ದ ವಿಂಚಿಯ ಸರ್ವತೋಮುಖ ಪ್ರತಿಭೆ </li>
+<li page="0001-0001">ಡಾನ್ ಕ್ವಿಕ್ಸೋಟನ ಜನಕ ಸರ್ವಾಂಟಿಸ್ </li>
+<li page="0001-0001">ಯುರೋಪಿನ ಕ್ರಾಂತಿದೂತ ರೂಸೊ </li>
+<li page="0001-0001">ಸಂಗೀತದ ಬಾಲಾದ್ಭುತ - ಮೊಜಾರ್ಟ್ </li>
+<li page="0001-0001">ವಿಕ್ಷಿಪ್ತ ಚಿತ್ರಕಾರ - ಹೊಕುಸಾಯಿ</li>
+<li page="0001-0001">ಫ್ರೆಂಚ್ ಸಾಹಿತ್ಯ ಚಕ್ರವರ್ತಿ ವಿಕ್ಟರ್ ಹ್ಯೂಗೋ </li>
+<li page="0001-0001">ಯುಗಪುರುಷ ಲೆನಿನ್ </li>
+<li page="0001-0001">ಟ್ರಾಟ್‌ಸ್ಕಿಗೆ ಮರಣ ಬಂತು </li>
+<li page="0001-0001">ಮಹಾಮುತ್ಸದ್ದಿ ಕ್ರುಶ್ಚೇವ್</li>
+<li page="0001-0001">ಅಂಡರ್‌ಸನ್ - ಮಕ್ಕಳ ಕಥೆಗಳ ರಾಜ </li>
+<li page="0001-0001">ಉಡಾಳ ಹುಡುಗ ಶ್ರೇಷ್ಠ ಸಾಹಿತಿಯಾದ (ಮಾರ್ಕ್ ಟ್ವೇನ್)</li>
+<li page="0001-0001">ಐನ್‌ಸ್ಟೈನರ ಬಾಲ್ಯ ಜೀವನ </li>
+<li page="0001-0001">ಕಲಾಪ್ರತಿಭೆಯ ಗಾಗಿನ್ </li>
+<li page="0001-0001">ಕೋಟ್ಯಧೀಶ ಸಾಹಿತಿ - ಸಮರ್ಸೆಟ್  ಮಾಮ್</li>
+<li page="0001-0001">ಮಹಾವಿಜ್ಞಾನಿ ಜಾನ್ ಬಾರ್ಡಿನ್ </li>
+<li page="0001-0001">ಅನ್ಯಾಯದ ವಿರುದ್ಧ - ಎಮಿಲಿ ಜೋಲಾ</li>
+<li page="0001-0001">ಶತಕೋಟಿ ದಾನಿ ಆಂಡ್ರೂ ಕಾರ್ನೆಜಿ </li>
+<li page="0001-0001">ಧ್ಯೇಯವಾದೀ ಸಾಹಿತಿ - ಆಂದ್ರೆ ಮಲ್ರಾ</li>
+<li page="0001-0001">ಡಾಕ್ಟರ್ ಆಲ್ಬರ್ಟ್ ಶ್ವೈತ್ಸರ್</li>
+<li page="0001-0001">ಜಪಾನಿನ ವಿಚಿತ್ರ ಲೇಖಕ - ಮಿಶಿಮಾ </li>
+<li page="0001-0001">ವಿಶ್ವಶಾಂತಿ ಸಾಧಕ ರಾಲ್ಫ್  ಬುಂಚ್ </li>
+<li page="0001-0001">ದಕ್ಷಿಣ ಅಮೇರಿಕದ ಮಹಾಕವಿ - ಪಾಬ್ಲೊ ನೇರುದಾ </li>
+<li page="0001-0001">ನಿರಾಶ್ರಿತರ ಆಶ್ರಯದಾತ : ಫಾದರ್ ಪಿಯರ್</li>
+<li page="0001-0001">ಪಾಸ್ಟರ್‌ನಾಕ್ ಮತ್ತು ಅವರ ಕಾದಂಬರಿ </li>
+<li page="0001-0001">ಅದೃಷ್ಟಹೀನ ರಾಜ ಲಿಯೊಪಾಲ್ಡ್ </li>
+<li page="0001-0001">ಜಾರ್ಜ್ ಸ್ಯಾಂಡ್ - ಗಂಡು ಬದುಕಿನ ಹೆಣ್ಣು ಸಾಹಿತಿ</li>
+<li page="0001-0001">ಕೆನ್ಯಾ ದೇಶದ ಸ್ವಾತಂತ್ರ್ಯ ಯೋಧರು </li>
+<li page="0001-0001">ಚದುರಂಗ ಚಕ್ರವರ್ತಿ - ಬಾಬಿ ಫಿಷರ್</li>
 </ol>
 </div>
