--- a/application/views/flat/3-Books/005.xhtml
+++ b/application/views/flat/3-Books/005.xhtml
@@ -1,49 +1,49 @@
 ﻿<div data-bcode="005">
 	<h1 class="title" data-language="kannada">ಖ್ಯಾತಿವೆತ್ತ ಭಾರತೀಯರು</h1>
 	<ol>
-<li page="">ಪರಿವಿಡಿ</li>
-<li page="">ಲೇಖನ</li>
-<li page="">ಅಂಬೇಡಕರರು ಹಾಗೇಕಾದರು ? </li>
-<li page="">ಪಶ್ಚಿಮಕ್ಕೆ ಯೋಗಮಾರ್ಗ ತೋರಿಸಿದ ಸುಂದರರಾಜ ಅಯ್ಯಂಗಾರ್ </li>
-<li page="">ಆದರ್ಶ ರೈತ ಚೆನ್ನಮಲ್ಲಪ್ಪ ಅಸುಂಡಿಯವರು </li>
-<li page="">ಆನಂದಿಬಾಯಿ ಜೋಶಿ </li>
-<li page="">ಶಿಕ್ಷಣತಜ್ಞ ಒಡೆಯರರೊಂದಿಗೆ ಒಂದೆರಡು ಗಂಟೆ </li>
-<li page="">ಟೈಪ್‌ರೈಟರ್ ನಿರ್ಮಿಸಿದ ಕಟ್ಟಿಯವರು </li>
-<li page="">ರಂಟೆಯಿಂದ ಮೋಟಾರ್: ಕಿರ್ಲೋಸ್ಕರ ನಡೆದು ಬಂದ ದಾರಿ </li>
-<li page="">ಡಾ. ಆನಂದ ಕುಮಾರಸ್ವಾಮಿ </li>
-<li page="">ನಾಟ್ಯಾಚಾರ ಶ್ರೀನಿವಾಸ ಕುಲಕರ್ಣಿ </li>
-<li page="">ಸುಚೇತಾ ಕೃಪಲಾನಿ </li>
-<li page="">ಜಗದ್ಗುರುವಾಗಲೊಲ್ಲದ ಜೆ. ಕೃಷ್ಣಮೂರ್ತಿ</li>
-<li page="">ಗಾಂಧೀಜಿಯ ಅಂತರ್ವಾಣಿ </li>
-<li page="">ಅಪಾರ ಆತ್ಮಬಲದ ಜಗದೀಶನ್ </li>
-<li page="">ಜನಪ್ರಿಯ ಸ್ತ್ರೀರೋಗತಜ್ಞ ಡಾ. ಶ್ರೀನಿವಾಸ ಕೌಲಗೌಡ </li>
-<li page="">ಸಂಗೀತ ಪಂಡಿತ ಭೀಮಸೇನ ಜೋಶಿ </li>
-<li page="">ಬ್ರಹ್ಮರ್ಷಿ ದೈವರಾತರು </li>
-<li page="">ಕಲಾಗುರು ಜಿ.ಎಸ್. ದಂಡಾವತಿಮಠ </li>
-<li page="">ಶಂಕರನ್ ನಂಬೂದ್ರಿಪಾದ ಯಾರು ? </li>
-<li page="">ಆ ನಹರು ಕೋಪ !</li>
-<li page="">ಕಮಲಾ ನೆಹರು </li>
-<li page="">ಬಿಳಿಯ ಕನ್ನಡಿಗ: ಎ.ಸಿ. ಫ್ಯಾರನ್ </li>
-<li page="">ನ್ಯಾಯಮೂರ್ತಿ ಮಹಾಜನ </li>
-<li page="">ಮಹರ್ಷಿ ಮಹೇಶಯೋಗಿಗಳ ಕ್ರಾಂತಧ್ಯಾನ </li>
-<li page="">ನಮ್ಮ ಹೊಸ ಮುಖ್ಯ ಸೇನಾಪತಿ </li>
-<li page="">ಮುರಾರಜಿ ದೇಸಾಯಿ ಪಾ.ವೆಂ.ರವರ ಮೊರಾರ್ಜಿ ಮೇಲಿನ ಲೇಖನಕ್ಕೆ ಬಂದ ಪ್ರತಿಕ್ರಿಯೆಗೆ ಪ್ರತ್ಯುತ್ತರ </li>
-<li page="">ಸಿ.ಪಿ. ರಾಮಸ್ವಾಮಿ ಅಯ್ಯರ್ </li>
-<li page="">ಲಾಲ ಬಹಾದುರ ಶಾಸ್ತ್ರಿ </li>
-<li page="">ರಾಮಮನೋಹರ ಲೋಹಿಯಾ </li>
-<li page="">ಶ್ರೀಮತಿ ವಿಜಯಲಕ್ಷ್ಮಿ ಪಂಡಿತ </li>
-<li page="">ಡಾ. ಮೇರಿ ವರ್ಗಿಸ್ </li>
-<li page="">ಹರಿಜನ ಕೈವಾರಿ ಸರದಾರ ವೀರನಗೌಡರ </li>
-<li page="">ಹುತಾತ್ಮ ಮೀರ್ ಮಕಬಲ್ ಶೆರ್ವಾನಿ </li>
-<li page="">ವೀಣೆ ಶೇಷಣ್ಣ </li>
-<li page="">ಭಾರತದ ಕೋಗಿಲೆ: ಸರೋಜಿನಿದೇವಿ </li>
-<li page="">ಪಂಡಿತ ಸಾವಳೇಕರ </li>
-<li page="">ಆರ್.ಎಸ್.ಎಸ್. ಸಂಸ್ಥಾಪಕ ಹೆಡಗೇವಾರ್ </li>
-<li page="">ಗೋಪಾಲ ಗಣೇಶ ಆಗರಕರ್ </li>
-<li page="">ರಮಾನಂದ ಚಟರ್ಜಿ </li>
-<li page="">ಗಾಂಧೀಜಿಯ ಅಗ್ನಿಪರೀಕ್ಷೆ </li>
-<li page="">CHAACHA NEHRU </li>
-<li page="">ಚೀನಾ ಯಾತ್ರಿಕ ಕಶ್ಯಪ ಮಾತಂಗ </li>
-<li page="">ಯವನಿಯನ್ನು ವರಿಸಿದ ಬ್ರಾಹ್ಮಣ ಕವಿ</li>
+<li page="0001-0001">ಪರಿವಿಡಿ</li>
+<li page="0001-0001">ಲೇಖನ</li>
+<li page="0001-0001">ಅಂಬೇಡಕರರು ಹಾಗೇಕಾದರು ? </li>
+<li page="0001-0001">ಪಶ್ಚಿಮಕ್ಕೆ ಯೋಗಮಾರ್ಗ ತೋರಿಸಿದ ಸುಂದರರಾಜ ಅಯ್ಯಂಗಾರ್ </li>
+<li page="0001-0001">ಆದರ್ಶ ರೈತ ಚೆನ್ನಮಲ್ಲಪ್ಪ ಅಸುಂಡಿಯವರು </li>
+<li page="0001-0001">ಆನಂದಿಬಾಯಿ ಜೋಶಿ </li>
+<li page="0001-0001">ಶಿಕ್ಷಣತಜ್ಞ ಒಡೆಯರರೊಂದಿಗೆ ಒಂದೆರಡು ಗಂಟೆ </li>
+<li page="0001-0001">ಟೈಪ್‌ರೈಟರ್ ನಿರ್ಮಿಸಿದ ಕಟ್ಟಿಯವರು </li>
+<li page="0001-0001">ರಂಟೆಯಿಂದ ಮೋಟಾರ್: ಕಿರ್ಲೋಸ್ಕರ ನಡೆದು ಬಂದ ದಾರಿ </li>
+<li page="0001-0001">ಡಾ. ಆನಂದ ಕುಮಾರಸ್ವಾಮಿ </li>
+<li page="0001-0001">ನಾಟ್ಯಾಚಾರ ಶ್ರೀನಿವಾಸ ಕುಲಕರ್ಣಿ </li>
+<li page="0001-0001">ಸುಚೇತಾ ಕೃಪಲಾನಿ </li>
+<li page="0001-0001">ಜಗದ್ಗುರುವಾಗಲೊಲ್ಲದ ಜೆ. ಕೃಷ್ಣಮೂರ್ತಿ</li>
+<li page="0001-0001">ಗಾಂಧೀಜಿಯ ಅಂತರ್ವಾಣಿ </li>
+<li page="0001-0001">ಅಪಾರ ಆತ್ಮಬಲದ ಜಗದೀಶನ್ </li>
+<li page="0001-0001">ಜನಪ್ರಿಯ ಸ್ತ್ರೀರೋಗತಜ್ಞ ಡಾ. ಶ್ರೀನಿವಾಸ ಕೌಲಗೌಡ </li>
+<li page="0001-0001">ಸಂಗೀತ ಪಂಡಿತ ಭೀಮಸೇನ ಜೋಶಿ </li>
+<li page="0001-0001">ಬ್ರಹ್ಮರ್ಷಿ ದೈವರಾತರು </li>
+<li page="0001-0001">ಕಲಾಗುರು ಜಿ.ಎಸ್. ದಂಡಾವತಿಮಠ </li>
+<li page="0001-0001">ಶಂಕರನ್ ನಂಬೂದ್ರಿಪಾದ ಯಾರು ? </li>
+<li page="0001-0001">ಆ ನಹರು ಕೋಪ !</li>
+<li page="0001-0001">ಕಮಲಾ ನೆಹರು </li>
+<li page="0001-0001">ಬಿಳಿಯ ಕನ್ನಡಿಗ: ಎ.ಸಿ. ಫ್ಯಾರನ್ </li>
+<li page="0001-0001">ನ್ಯಾಯಮೂರ್ತಿ ಮಹಾಜನ </li>
+<li page="0001-0001">ಮಹರ್ಷಿ ಮಹೇಶಯೋಗಿಗಳ ಕ್ರಾಂತಧ್ಯಾನ </li>
+<li page="0001-0001">ನಮ್ಮ ಹೊಸ ಮುಖ್ಯ ಸೇನಾಪತಿ </li>
+<li page="0001-0001">ಮುರಾರಜಿ ದೇಸಾಯಿ ಪಾ.ವೆಂ.ರವರ ಮೊರಾರ್ಜಿ ಮೇಲಿನ ಲೇಖನಕ್ಕೆ ಬಂದ ಪ್ರತಿಕ್ರಿಯೆಗೆ ಪ್ರತ್ಯುತ್ತರ </li>
+<li page="0001-0001">ಸಿ.ಪಿ. ರಾಮಸ್ವಾಮಿ ಅಯ್ಯರ್ </li>
+<li page="0001-0001">ಲಾಲ ಬಹಾದುರ ಶಾಸ್ತ್ರಿ </li>
+<li page="0001-0001">ರಾಮಮನೋಹರ ಲೋಹಿಯಾ </li>
+<li page="0001-0001">ಶ್ರೀಮತಿ ವಿಜಯಲಕ್ಷ್ಮಿ ಪಂಡಿತ </li>
+<li page="0001-0001">ಡಾ. ಮೇರಿ ವರ್ಗಿಸ್ </li>
+<li page="0001-0001">ಹರಿಜನ ಕೈವಾರಿ ಸರದಾರ ವೀರನಗೌಡರ </li>
+<li page="0001-0001">ಹುತಾತ್ಮ ಮೀರ್ ಮಕಬಲ್ ಶೆರ್ವಾನಿ </li>
+<li page="0001-0001">ವೀಣೆ ಶೇಷಣ್ಣ </li>
+<li page="0001-0001">ಭಾರತದ ಕೋಗಿಲೆ: ಸರೋಜಿನಿದೇವಿ </li>
+<li page="0001-0001">ಪಂಡಿತ ಸಾವಳೇಕರ </li>
+<li page="0001-0001">ಆರ್.ಎಸ್.ಎಸ್. ಸಂಸ್ಥಾಪಕ ಹೆಡಗೇವಾರ್ </li>
+<li page="0001-0001">ಗೋಪಾಲ ಗಣೇಶ ಆಗರಕರ್ </li>
+<li page="0001-0001">ರಮಾನಂದ ಚಟರ್ಜಿ </li>
+<li page="0001-0001">ಗಾಂಧೀಜಿಯ ಅಗ್ನಿಪರೀಕ್ಷೆ </li>
+<li page="0001-0001">CHAACHA NEHRU </li>
+<li page="0001-0001">ಚೀನಾ ಯಾತ್ರಿಕ ಕಶ್ಯಪ ಮಾತಂಗ </li>
+<li page="0001-0001">ಯವನಿಯನ್ನು ವರಿಸಿದ ಬ್ರಾಹ್ಮಣ ಕವಿ</li>
 </ol>
 </div>
