--- a/application/views/flat/3-Books/007.xhtml
+++ b/application/views/flat/3-Books/007.xhtml
@@ -1,26 +1,26 @@
 ﻿<div data-bcode="007">
 	<h1 class="title" data-language="kannada">ಪಾವೆಂ ಕಸ್ತೂರಿ</h1>
 	<ol>
-<li page="">ಪರಿವಿಡಿ</li>
-<li page="">ಹಿಂದಿರುಗಿ ನೋಡುವಾಗ - ಪಾ . ವೆಂ. ಆಚಾರ್ಯ</li>
-<li page="">ನನ್ನ ಪತಿ ಪಾವೆಂ - ಲಕ್ಷ್ಮೀಬಾಯಿ ಆಚಾರ್ಯ</li>
-<li page="">ಸ್ವೋಪಜ್ಞ ಆಚಾರ್ಯರು -   ಶಂ. ಬಾ. ಜೋಶಿ</li>
-<li page="">ಬಹುಮುಖ ಪ್ರತಿಭೆಯ ಆಚಾರ್ಯರು - ಹ.ರಾ. ಪುರೋಹಿತ</li>
-<li page="">ಆತ್ಮೀಯ ಸ್ನೇಹಿತ ಪಾವೆಂ - ಬಿ. ಎಚ್. ಶ್ರೀಧರ</li>
-<li page="">ಕನ್ನಡದ ಆಸ್ತಿ ಪಾವೆಂ - ಗೀತಾ ಕುಲಕರ್ಣಿ</li>
-<li page="">ಪಾವೆಂ ಸಂದರ್ಶನ - ನಾ. ಮೊಗಸಾಲೆ</li>
-<li page="">ಕಲಾವಿದ ಕಂಡಂತ ಪಾವೆಂ - ಪಿ. ಆರ್. ತಿಪ್ಪೇಸ್ವಾಮಿ</li>
-<li page="">ಪಾವೆಂ ಕನ್ನಡದ ಕಸ್ತೂರಿ - ಸಿದ್ದಲಿಂಗ ಪಟ್ಟಣಶೆಟ್ಟ</li>
-<li page="">ರೋಗಿಯಾಗಿ ಪಾವೆಂ - ಸಿ. ಆರ್. ರಘು</li>
-<li page="">ಲಾಂಗೂಲ ಪ್ರಶಂಸೆ - ಎನ್, ಪ್ರಹ್ಲಾದರಾವ್</li>
-<li page="">ನಮಗೆ ಹಿರಿಯರಾದರೂ ಗೆಳೆಯರಾಗಿ ಉಳಿದ ಪಾವೆಂ - ಯು. ಆರ್. ಅನಂತಮೂರ್ತಿ</li>
-<li page="">'ನವನೀರದ'-ಒಂದು ವಿಮರ್ಶೆ - ಹಾ. ಮಾ. ನಾಯಕ</li>
-<li page="">ಪಾವೆಂ ಸಾಮೀಪ್ಯ -  ಕು. ಶಿ. ಹರಿದಾಸಭಟ್ಟ</li>
-<li page="">ನಮ್ಮ ಪಾವೆಂ  - ಮಾಧವ ನಾ. ಮಹಿಷಿ</li>
-<li page="">ಪಾಡಿಗಾರು ವೆಂಕಟರಮಣಾಚಾರ್ಯರಿಗೆ ನಮಸ್ಕಾರ - ಗೋಪಾಲಕೃಷ್ಣ ಅಡಿಗ</li>
-<li page="">ಬಯಕೆ -  ಎಸ್. ಎಲ್. ಭೈರಪ್ಪ </li>
-<li page="">ಸ್ಫೂರ್ತಿಯ ಚಿಲುಮೆ ಪಾವೆಂ- ಜಿ. ಎಸ್. ಭಟ್ಟ </li>
-<li page="">ನನ್ನ ಜೀವನ ದೃಷ್ಟಿ - ಪಾ . ವೆಂ. ಆಚಾರ್ಯ</li>
-<li page="">ಕಾರ್ಯದರ್ಶಿಯ ವರದಿ- ಜಿ. ಟಿ. ನಾರಾಯಣರಾವ್</li>
+<li page="0001-0001">ಪರಿವಿಡಿ</li>
+<li page="0001-0001">ಹಿಂದಿರುಗಿ ನೋಡುವಾಗ - ಪಾ . ವೆಂ. ಆಚಾರ್ಯ</li>
+<li page="0001-0001">ನನ್ನ ಪತಿ ಪಾವೆಂ - ಲಕ್ಷ್ಮೀಬಾಯಿ ಆಚಾರ್ಯ</li>
+<li page="0001-0001">ಸ್ವೋಪಜ್ಞ ಆಚಾರ್ಯರು -   ಶಂ. ಬಾ. ಜೋಶಿ</li>
+<li page="0001-0001">ಬಹುಮುಖ ಪ್ರತಿಭೆಯ ಆಚಾರ್ಯರು - ಹ.ರಾ. ಪುರೋಹಿತ</li>
+<li page="0001-0001">ಆತ್ಮೀಯ ಸ್ನೇಹಿತ ಪಾವೆಂ - ಬಿ. ಎಚ್. ಶ್ರೀಧರ</li>
+<li page="0001-0001">ಕನ್ನಡದ ಆಸ್ತಿ ಪಾವೆಂ - ಗೀತಾ ಕುಲಕರ್ಣಿ</li>
+<li page="0001-0001">ಪಾವೆಂ ಸಂದರ್ಶನ - ನಾ. ಮೊಗಸಾಲೆ</li>
+<li page="0001-0001">ಕಲಾವಿದ ಕಂಡಂತ ಪಾವೆಂ - ಪಿ. ಆರ್. ತಿಪ್ಪೇಸ್ವಾಮಿ</li>
+<li page="0001-0001">ಪಾವೆಂ ಕನ್ನಡದ ಕಸ್ತೂರಿ - ಸಿದ್ದಲಿಂಗ ಪಟ್ಟಣಶೆಟ್ಟ</li>
+<li page="0001-0001">ರೋಗಿಯಾಗಿ ಪಾವೆಂ - ಸಿ. ಆರ್. ರಘು</li>
+<li page="0001-0001">ಲಾಂಗೂಲ ಪ್ರಶಂಸೆ - ಎನ್, ಪ್ರಹ್ಲಾದರಾವ್</li>
+<li page="0001-0001">ನಮಗೆ ಹಿರಿಯರಾದರೂ ಗೆಳೆಯರಾಗಿ ಉಳಿದ ಪಾವೆಂ - ಯು. ಆರ್. ಅನಂತಮೂರ್ತಿ</li>
+<li page="0001-0001">'ನವನೀರದ'-ಒಂದು ವಿಮರ್ಶೆ - ಹಾ. ಮಾ. ನಾಯಕ</li>
+<li page="0001-0001">ಪಾವೆಂ ಸಾಮೀಪ್ಯ -  ಕು. ಶಿ. ಹರಿದಾಸಭಟ್ಟ</li>
+<li page="0001-0001">ನಮ್ಮ ಪಾವೆಂ  - ಮಾಧವ ನಾ. ಮಹಿಷಿ</li>
+<li page="0001-0001">ಪಾಡಿಗಾರು ವೆಂಕಟರಮಣಾಚಾರ್ಯರಿಗೆ ನಮಸ್ಕಾರ - ಗೋಪಾಲಕೃಷ್ಣ ಅಡಿಗ</li>
+<li page="0001-0001">ಬಯಕೆ -  ಎಸ್. ಎಲ್. ಭೈರಪ್ಪ </li>
+<li page="0001-0001">ಸ್ಫೂರ್ತಿಯ ಚಿಲುಮೆ ಪಾವೆಂ- ಜಿ. ಎಸ್. ಭಟ್ಟ </li>
+<li page="0001-0001">ನನ್ನ ಜೀವನ ದೃಷ್ಟಿ - ಪಾ . ವೆಂ. ಆಚಾರ್ಯ</li>
+<li page="0001-0001">ಕಾರ್ಯದರ್ಶಿಯ ವರದಿ- ಜಿ. ಟಿ. ನಾರಾಯಣರಾವ್</li>
 </ol>
 </div>
