--- a/application/views/flat/3-Books/008.xhtml
+++ b/application/views/flat/3-Books/008.xhtml
@@ -1,38 +1,38 @@
 ﻿<div data-bcode="008">
 	<h1 class="title" data-language="kannada">ಬೆಂಬಿಡದ ಭೂತಗಳು</h1>
 	<ol>
-<li page="">ಪರಿವಿಡಿ</li>
-<li page="">ನಿಮಿತ್ತ : ಡಾ. ಸರ್ವಮಂಗಳಾ ಪಿ.ಆರ್</li>
-<li page="">ನಮ್ಮ ತಂದೆ ಪಾವೆಂ : ರಾಧಾಕೃಷ್ಣ ಆಚಾರ್</li>
-<li page="">(ಪರಿಚಯ) :  ಶಿವಾನಂದ ಜೋಶಿ</li>
-<li page="">ಧನ್ಯೋಸ್ಮಿ  :  ಶಿವಾನಂದ ಜೋಶಿ</li>
-<li page="">ಸ್ವಾತಂತ್ರ್ಯ : ಅನಿವಾರ್ಯದ ಔದಾರ್ಯ </li>
-<li page="">ವ್ಯಕ್ತಿ. ಪ್ರಜಾಪ್ರಭುತ್ವ. ನೈತಿಕತೆ ಇತ್ಯಾದಿ </li>
-<li page="">ಗಲಭೆಗಳು, ಅಧಿಕಾರದಾಹ, ಪ್ರಜಾತಂತ್ರ ಇತ್ಯಾದಿ </li>
-<li page="">ಪ್ರಜಾಪ್ರಭುತ್ವ ಹಾಗೂ ಹೈಕಮಾಂಡ್ ಸಂಸ್ಕೃತಿ </li>
-<li page="">ಚುನಾವಣೆಗಳ ಹೊಸಯುಗ </li>
-<li page="">ಚುನಾವಣೆ ಹಾಗೂ ಬದಲಾವಣೆ </li>
-<li page="">ಚುನಾವಣೆ ಮತದಾರ ಇತ್ಯಾದಿ </li>
-<li page="">ಅಧ್ಯಕ್ಷ ಪದ್ಧತಿ : ಕೆಲ ಚಿಂತನೆಗಳು </li>
-<li page="">ಅಧ್ಯಕ್ಷೀಯ ಪದ್ಧತಿ ಸೂಕ್ತವಹುದೆ? </li>
-<li page="">ಚಳುವಳಿಗಳು ಮತ್ತು ದಬ್ಬಾಳಿಕೆ </li>
-<li page="">ಸುಗ್ರೀವಾಜ್ಞೆಗಳು </li>
-<li page="">ಶಾಸನಾಂಗದ ಅಧಿಕಾರ ವ್ಯಾಪ್ತಿ. </li>
-<li page="">ಕೇಂದ್ರ -ರಾಜ್ಯ ಅಧಿಕಾರ ಪರಿಸಮನ </li>
-<li page="">ನ್ಯಾಯಾಂಗ - ಕಾರ್ಯಾಂಗ ತಿಕ್ಕಾಟ</li>
-<li page="">ಮೈಸೂರು - ಮಹಾರಾಷ್ಟ್ರ ಗಡಿತಂಟೆ - ೧ </li>
-<li page="">ಗಡಿತಂಟೆ - ವಿವೇಕ ಮತ್ತು ಅವಿವೇಕ - ೨ </li>
-<li page="">ಗಡಿತಂಟೆ -ಮಹಾಜನ ವರದಿಯ ದುರದೃಷ್ಟ - ೩ </li>
-<li page="">ಮತ್ತೊಮ್ಮೆ ಗಡಿತಂಟೆ - ೪ </li>
-<li page="">ಆಂಧ್ರದಲ್ಲಿ ನಡೆದಿರುವುದೇನು? </li>
-<li page="">ಭಾರತದ ನೆರೆ - ಹೊರೆ </li>
-<li page="">ಕಾಶ್ಮೀರದಲ್ಲಿ ನಾವೇಕೆ ಹೋರಾಡುತ್ತಿದ್ದೇವೆ</li>
-<li page="">ಜಾತೀಯತೆಯ ಪ್ರಶ್ನೆ : ಅರ್ಥ ಮತ್ತು ಅನರ್ಥ</li>
-<li page="">ರಾಜಕಾರಣವೊಂದು ವೃತ್ತಿಯಾಗಬೇಕು </li>
-<li page="">ಭ್ರಷ್ಟಾಚಾರ ಸ್ವಾಭಾವಿಕ ದೌರ್ಬಲ್ಯವೇ? </li>
-<li page="">ಭ್ರಷ್ಟಾಚಾರಕ್ಕೂ ಬೇಕೆ ಆಚಾರ ಸಂಹಿತೆ </li>
-<li page="">ಕಲ್ಯಾಣ ರಾಜ್ಯ ಕಲ್ಯಾಣ ತಂದೀತೇ? </li>
-<li page="">ಈ ದೇಶ ಅಷ್ಟು ಕೆಟ್ಟು ಹೋಗಿದೆಯೇ?</li>
-<li page="">ತೇಲಿದ್ದೆಷ್ಟು ಈಸಿದ್ದೆಷ್ಟು? (ಪಾವೆಂ ಆತ್ಮಾವಲೋಕನ)</li>
+<li page="0001-0001">ಪರಿವಿಡಿ</li>
+<li page="0001-0001">ನಿಮಿತ್ತ : ಡಾ. ಸರ್ವಮಂಗಳಾ ಪಿ.ಆರ್</li>
+<li page="0001-0001">ನಮ್ಮ ತಂದೆ ಪಾವೆಂ : ರಾಧಾಕೃಷ್ಣ ಆಚಾರ್</li>
+<li page="0001-0001">(ಪರಿಚಯ) :  ಶಿವಾನಂದ ಜೋಶಿ</li>
+<li page="0001-0001">ಧನ್ಯೋಸ್ಮಿ  :  ಶಿವಾನಂದ ಜೋಶಿ</li>
+<li page="0001-0001">ಸ್ವಾತಂತ್ರ್ಯ : ಅನಿವಾರ್ಯದ ಔದಾರ್ಯ </li>
+<li page="0001-0001">ವ್ಯಕ್ತಿ. ಪ್ರಜಾಪ್ರಭುತ್ವ. ನೈತಿಕತೆ ಇತ್ಯಾದಿ </li>
+<li page="0001-0001">ಗಲಭೆಗಳು, ಅಧಿಕಾರದಾಹ, ಪ್ರಜಾತಂತ್ರ ಇತ್ಯಾದಿ </li>
+<li page="0001-0001">ಪ್ರಜಾಪ್ರಭುತ್ವ ಹಾಗೂ ಹೈಕಮಾಂಡ್ ಸಂಸ್ಕೃತಿ </li>
+<li page="0001-0001">ಚುನಾವಣೆಗಳ ಹೊಸಯುಗ </li>
+<li page="0001-0001">ಚುನಾವಣೆ ಹಾಗೂ ಬದಲಾವಣೆ </li>
+<li page="0001-0001">ಚುನಾವಣೆ ಮತದಾರ ಇತ್ಯಾದಿ </li>
+<li page="0001-0001">ಅಧ್ಯಕ್ಷ ಪದ್ಧತಿ : ಕೆಲ ಚಿಂತನೆಗಳು </li>
+<li page="0001-0001">ಅಧ್ಯಕ್ಷೀಯ ಪದ್ಧತಿ ಸೂಕ್ತವಹುದೆ? </li>
+<li page="0001-0001">ಚಳುವಳಿಗಳು ಮತ್ತು ದಬ್ಬಾಳಿಕೆ </li>
+<li page="0001-0001">ಸುಗ್ರೀವಾಜ್ಞೆಗಳು </li>
+<li page="0001-0001">ಶಾಸನಾಂಗದ ಅಧಿಕಾರ ವ್ಯಾಪ್ತಿ. </li>
+<li page="0001-0001">ಕೇಂದ್ರ -ರಾಜ್ಯ ಅಧಿಕಾರ ಪರಿಸಮನ </li>
+<li page="0001-0001">ನ್ಯಾಯಾಂಗ - ಕಾರ್ಯಾಂಗ ತಿಕ್ಕಾಟ</li>
+<li page="0001-0001">ಮೈಸೂರು - ಮಹಾರಾಷ್ಟ್ರ ಗಡಿತಂಟೆ - ೧ </li>
+<li page="0001-0001">ಗಡಿತಂಟೆ - ವಿವೇಕ ಮತ್ತು ಅವಿವೇಕ - ೨ </li>
+<li page="0001-0001">ಗಡಿತಂಟೆ -ಮಹಾಜನ ವರದಿಯ ದುರದೃಷ್ಟ - ೩ </li>
+<li page="0001-0001">ಮತ್ತೊಮ್ಮೆ ಗಡಿತಂಟೆ - ೪ </li>
+<li page="0001-0001">ಆಂಧ್ರದಲ್ಲಿ ನಡೆದಿರುವುದೇನು? </li>
+<li page="0001-0001">ಭಾರತದ ನೆರೆ - ಹೊರೆ </li>
+<li page="0001-0001">ಕಾಶ್ಮೀರದಲ್ಲಿ ನಾವೇಕೆ ಹೋರಾಡುತ್ತಿದ್ದೇವೆ</li>
+<li page="0001-0001">ಜಾತೀಯತೆಯ ಪ್ರಶ್ನೆ : ಅರ್ಥ ಮತ್ತು ಅನರ್ಥ</li>
+<li page="0001-0001">ರಾಜಕಾರಣವೊಂದು ವೃತ್ತಿಯಾಗಬೇಕು </li>
+<li page="0001-0001">ಭ್ರಷ್ಟಾಚಾರ ಸ್ವಾಭಾವಿಕ ದೌರ್ಬಲ್ಯವೇ? </li>
+<li page="0001-0001">ಭ್ರಷ್ಟಾಚಾರಕ್ಕೂ ಬೇಕೆ ಆಚಾರ ಸಂಹಿತೆ </li>
+<li page="0001-0001">ಕಲ್ಯಾಣ ರಾಜ್ಯ ಕಲ್ಯಾಣ ತಂದೀತೇ? </li>
+<li page="0001-0001">ಈ ದೇಶ ಅಷ್ಟು ಕೆಟ್ಟು ಹೋಗಿದೆಯೇ?</li>
+<li page="0001-0001">ತೇಲಿದ್ದೆಷ್ಟು ಈಸಿದ್ದೆಷ್ಟು? (ಪಾವೆಂ ಆತ್ಮಾವಲೋಕನ)</li>
 </ol>
 </div>
