--- a/application/views/flat/3-Books/010.xhtml
+++ b/application/views/flat/3-Books/010.xhtml
@@ -1,7 +1,7 @@
 ﻿<div data-bcode="010">
 	<h1 class="title" data-language="kannada">ಶಿಕ್ಷಣ ಮತ್ತು ಜೀವನ ಮೌಲ್ಯಗಳು</h1>
 	<ol>
-<li page=""></li>
+<li page="0001-0001"></li>
 
 </ol>
 </div>
