--- a/application/views/flat/3-Books/011.xhtml
+++ b/application/views/flat/3-Books/011.xhtml
@@ -1,48 +1,48 @@
 ﻿<div data-bcode="011">
 	<h1 class="title" data-language="kannada">ಲೋಕದ ಡೊಂಕು</h1>
 	<ol>
-<li page="">ಪರಿವಿಡಿ</li>
-<li page="">ನಾನು ಹುಟ್ಟಿದ್ದು </li>
-<li page="">ನನ್ನ ಗಣಿತ ಸಮಸ್ಯೆಗಳು </li>
-<li page="">ಬೇಂದ್ರೆ ಅಂದ್ರೆ </li>
-<li page="">ದೇವರ ಭಾಷೆ </li>
-<li page="">ಸಿಗರೇಟಿನ ಹೊಗೆ ವರ್ತುಲ ವರ್ತುಲ</li>
-<li page="">ನಾನು ಯಾರು ? </li>
-<li page="">ಯಾರಿಗಾಗಿ ಬದುಕುತ್ತೇವೆ? </li>
-<li page="">ಬೈಗಳಿಗೊಂದು ನಿಘಂಟು </li>
-<li page="">ದ್ರೋಣಾಚಾರ್ಯರನ್ನು ಕಂಡೆ </li>
-<li page="">ಈ ಶಬ್ದಕ್ಕೆ ಅಂಜುತ್ತೇನೆ </li>
-<li page="">ಮರಳಿ ಸೈಕಲ್ ಯುಗಕ್ಕೆ </li>
-<li page="">ಕನ್ನಡ ! ಕನ್ನಡ ! ಇದೆಲ್ಲಾವುಂ ಎನ್ನಡ ? </li>
-<li page="">ಸತ್ಯ, ನಾನು ಮತ್ತು ಹರಿಶ್ಚಂದ್ರ </li>
-<li page="">ಮಂತ್ರದಿಂದ ಅಗ್ನಿ </li>
-<li page="">ಗಗನಯುಗದಲ್ಲಿ ಜ್ಯೋತಿಷ್ಯ </li>
-<li page="">ಅದೃಷ್ಟ ಅಪ್ಪಳಿಸಿದರೆ ... </li>
-<li page="">ನಾನು ಕಾಣದ ಭೂತಗಳು- ೧ </li>
-<li page="">ನಾನು ಕಾಣದ ಭೂತಗಳು-೨ </li>
-<li page="">ಬೀಳುವ ಸುಖ </li>
-<li page="">ಲಿಯಾಕತ್ ಅಲಿಯವರನ್ನು ಕಂಡೆ  </li>
-<li page="">ಉಪಕಾರ ಮಾಡಿ ನೋಡಿ ! </li>
-<li page="">ಸ್ನಾನಾಸ್ನಾನ ವಿವೇಕಂ </li>
-<li page="">ಮೈಸೂರು ದರ್ಶನ </li>
-<li page="">ಸನಾತನ ಧರ್ಮ ಮತ್ತು ಸೈಕಲ್</li>
-<li page="">ಮಾದರಿ ಮಡದಿ ಬೇಕೆ ? </li>
-<li page="">ಮನೆಗೊಂದು ಹೆಸರು </li>
-<li page="">ಭಾಷೆ ಮತ್ತು ಮುಖ  </li>
-<li page="">ಇಡಲೀ ಶಾಸ್ತ್ರ </li>
-<li page="">ನಮ್ಮ ರಾವಣನನ್ನು ಕಾಪಾಡಿ !</li>
-<li page="">ನನ್ನ ಆಧ್ಯಾತ್ಮಿಕ ಅಲರ್ಜಿ </li>
-<li page="">ಸಕ್ಕರೆ ಗೀತ </li>
-<li page="">ಗೊಣಗಿ ಗೊಣಗಿ ಕ್ರಾಂತಿ ತಪ್ಪಿಸಿರಿ </li>
-<li page="">ಇಸು...</li>
-<li page="">ಸವಿಗನಸುಗಳು </li>
-<li page="">ಸೈಟ-ಸ್ಟಿಕ್ಕುಗಳು  </li>
-<li page="">ನಾಸಿಕಾವಿಲಾಸಂ  </li>
-<li page="">ಆಸ್ಪತ್ರೆಯಲ್ಲಿ ಆಚಾರ್ಯರು </li>
-<li page="">ನಿಕ್ಸನ್ನರೊಡನೆ    ನಾನು </li>
-<li page="">ಗಾಂಧೀಜಿ ಬದುಕಿದ್ದಾರೆ! </li>
-<li page="">ನನ್ನ ಆಸ್ತ್ಮಾ ಷಷ್ಯ್ಟಬ್ದಿ </li>
-<li page="">ಸಾವಿನ ಸಮಸ್ಯೆ : ಮಕ್ಕಳು ಕಂಡಂತೆ </li>
-<li page="">ಲಾಂಗೂಲಾಚಾರ್ಯ ಯಾರು ?</li>
+<li page="0001-0001">ಪರಿವಿಡಿ</li>
+<li page="0001-0001">ನಾನು ಹುಟ್ಟಿದ್ದು </li>
+<li page="0001-0001">ನನ್ನ ಗಣಿತ ಸಮಸ್ಯೆಗಳು </li>
+<li page="0001-0001">ಬೇಂದ್ರೆ ಅಂದ್ರೆ </li>
+<li page="0001-0001">ದೇವರ ಭಾಷೆ </li>
+<li page="0001-0001">ಸಿಗರೇಟಿನ ಹೊಗೆ ವರ್ತುಲ ವರ್ತುಲ</li>
+<li page="0001-0001">ನಾನು ಯಾರು ? </li>
+<li page="0001-0001">ಯಾರಿಗಾಗಿ ಬದುಕುತ್ತೇವೆ? </li>
+<li page="0001-0001">ಬೈಗಳಿಗೊಂದು ನಿಘಂಟು </li>
+<li page="0001-0001">ದ್ರೋಣಾಚಾರ್ಯರನ್ನು ಕಂಡೆ </li>
+<li page="0001-0001">ಈ ಶಬ್ದಕ್ಕೆ ಅಂಜುತ್ತೇನೆ </li>
+<li page="0001-0001">ಮರಳಿ ಸೈಕಲ್ ಯುಗಕ್ಕೆ </li>
+<li page="0001-0001">ಕನ್ನಡ ! ಕನ್ನಡ ! ಇದೆಲ್ಲಾವುಂ ಎನ್ನಡ ? </li>
+<li page="0001-0001">ಸತ್ಯ, ನಾನು ಮತ್ತು ಹರಿಶ್ಚಂದ್ರ </li>
+<li page="0001-0001">ಮಂತ್ರದಿಂದ ಅಗ್ನಿ </li>
+<li page="0001-0001">ಗಗನಯುಗದಲ್ಲಿ ಜ್ಯೋತಿಷ್ಯ </li>
+<li page="0001-0001">ಅದೃಷ್ಟ ಅಪ್ಪಳಿಸಿದರೆ ... </li>
+<li page="0001-0001">ನಾನು ಕಾಣದ ಭೂತಗಳು- ೧ </li>
+<li page="0001-0001">ನಾನು ಕಾಣದ ಭೂತಗಳು-೨ </li>
+<li page="0001-0001">ಬೀಳುವ ಸುಖ </li>
+<li page="0001-0001">ಲಿಯಾಕತ್ ಅಲಿಯವರನ್ನು ಕಂಡೆ  </li>
+<li page="0001-0001">ಉಪಕಾರ ಮಾಡಿ ನೋಡಿ ! </li>
+<li page="0001-0001">ಸ್ನಾನಾಸ್ನಾನ ವಿವೇಕಂ </li>
+<li page="0001-0001">ಮೈಸೂರು ದರ್ಶನ </li>
+<li page="0001-0001">ಸನಾತನ ಧರ್ಮ ಮತ್ತು ಸೈಕಲ್</li>
+<li page="0001-0001">ಮಾದರಿ ಮಡದಿ ಬೇಕೆ ? </li>
+<li page="0001-0001">ಮನೆಗೊಂದು ಹೆಸರು </li>
+<li page="0001-0001">ಭಾಷೆ ಮತ್ತು ಮುಖ  </li>
+<li page="0001-0001">ಇಡಲೀ ಶಾಸ್ತ್ರ </li>
+<li page="0001-0001">ನಮ್ಮ ರಾವಣನನ್ನು ಕಾಪಾಡಿ !</li>
+<li page="0001-0001">ನನ್ನ ಆಧ್ಯಾತ್ಮಿಕ ಅಲರ್ಜಿ </li>
+<li page="0001-0001">ಸಕ್ಕರೆ ಗೀತ </li>
+<li page="0001-0001">ಗೊಣಗಿ ಗೊಣಗಿ ಕ್ರಾಂತಿ ತಪ್ಪಿಸಿರಿ </li>
+<li page="0001-0001">ಇಸು...</li>
+<li page="0001-0001">ಸವಿಗನಸುಗಳು </li>
+<li page="0001-0001">ಸೈಟ-ಸ್ಟಿಕ್ಕುಗಳು  </li>
+<li page="0001-0001">ನಾಸಿಕಾವಿಲಾಸಂ  </li>
+<li page="0001-0001">ಆಸ್ಪತ್ರೆಯಲ್ಲಿ ಆಚಾರ್ಯರು </li>
+<li page="0001-0001">ನಿಕ್ಸನ್ನರೊಡನೆ    ನಾನು </li>
+<li page="0001-0001">ಗಾಂಧೀಜಿ ಬದುಕಿದ್ದಾರೆ! </li>
+<li page="0001-0001">ನನ್ನ ಆಸ್ತ್ಮಾ ಷಷ್ಯ್ಟಬ್ದಿ </li>
+<li page="0001-0001">ಸಾವಿನ ಸಮಸ್ಯೆ : ಮಕ್ಕಳು ಕಂಡಂತೆ </li>
+<li page="0001-0001">ಲಾಂಗೂಲಾಚಾರ್ಯ ಯಾರು ?</li>
 </ol>
 </div>
