--- a/application/views/flat/3-Books/013.xhtml
+++ b/application/views/flat/3-Books/013.xhtml
@@ -1,47 +1,47 @@
 ﻿<div data-bcode="013">
 	<h1 class="title" data-language="kannada">ಹೊಸಗನ್ನಡದ ಹಿರಿಯರು</h1>
 	<ol>
-<li page="">ಹೊಸಗನ್ನಡದ ಹಿರಿಯರು ಮತ್ತು ಕೃತಿ-ಚಿಂತನೆ </li>
-<li page="">ಗೋವಿಂದ ಪೈಗಳೊಂದಿಗೆ </li>
-<li page="">ಬೇಂದ್ರೆ ಅಂದ್ರೆ </li>
-<li page="">ಪೊಳಲಿ ಶೀನಪ್ಪ ಹೆಗ್ಗಡೆ </li>
-<li page="">ಶಿವರಾಮ ಕಾರಂತ 'ಪ್ರಪಂಚ' </li>
-<li page="">ಕಾದಂಬರಿ ಯುಗಪ್ರವರ್ತಕ, ಅ.ನ.ಕೃ. </li>
-<li page="">ಸಾರಸ್ವತಲೋಕದ ಸಲಗ - ಶಂ. ಬಾ. </li>
-<li page="">ಸಮನ್ವಯದ ಉಪಾಸಕ ಗೋಕಾಕರು </li>
-<li page="">ಅಡಿಗರ ಮಾನವ ಕಾಳಜಿ</li>
-<li page="">ಬಿ. ಎಚ್. ಶ್ರೀಧರರು</li>
-<li page="">ನಾ ಕಂಡ ಮೊಹರೆಯವರು</li>
-<li page="">ಗುರುವರ್ಯ ಹ. ರಾ. ಪುರೋಹಿತರು </li>
-<li page="">ಬುರ್ಲಿ ಬಿಂದುಮಾಧವರು </li>
-<li page="">ಕನಸುಗಾರ ಜಿ ಬಿ ಜೋಶಿ  </li>
-<li page="">ಮಿತ್ರ ದ ಬಾ ಕುಲಕರ್ಣಿ  </li>
-<li page="">ಕ. ದಾಸಭಟ್ಟರು </li>
-<li page="">ಹುಕ್ಕೇರಿ ಬಾಳಪ್ಪನವರು </li>
-<li page="">ಹೆಮಂತಗಾನದ ಬಲ್ಲಾಳರು </li>
-<li page="">ಕನ್ನಡ ಪತ್ರಿಕೋದ್ಯೋಗ </li>
-<li page="">ಪತ್ರಿಕೋದ್ಯಮಿ 'ಪಾ.ವೆಂ.' ವಿಚಾರಧಾರೆ</li>
-<li page="">ಒಂದಿಷ್ಟು ಪ್ರಾಚೀನ ಪ್ರಮೇಯಗಳು </li>
-<li page="">ಹಳಗನ್ನಡ ಸಾಹಿತ್ಯ</li>
-<li page="">ಗಂಗಾಧರಂ ಶಾಸನ </li>
-<li page="">ಕವಿಸಮಯ ವಿಲಾಸಂ </li>
-<li page="">ನೇಮಿಚಂದ್ರನ ಒಂದು ಪದ್ಯ </li>
-<li page="">ಒಂದು ಅಪೂರ್ವ ಷಟ್ಟದಿ </li>
-<li page="">ಕುಮಾರವ್ಯಾಸ - ಕೆಲ ಬಿಡಿ ಆಲೋಚನೆಗಳು </li>
-<li page="">ಲಕ್ಷ್ಮೀಶನ ಸ್ಥಳ ಸಮಸ್ಯೆ</li>
-<li page="">ಸಂಸ್ಕೃತ ಸಾಹಿತ್ಯ </li>
-<li page="">ಸಂಸ್ಕೃತ ಮುಕ್ತಕ </li>
-<li page="">ಅಮರುಕನ ಶೃಂಗಾರ ಸೌರಭ </li>
-<li page="">ಸಂಸ್ಕೃತದಲ್ಲಿ ಪ್ರಣಯ ವ್ಯಾಪಾರ </li>
-<li page="">ವೆಂಕಟಾಧ್ವರಿ ಕಂಡ ದಕ್ಷಿಣ ಭಾರತ </li>
-<li page="">ಈ ನ್ಯಾಯಗಳೇ ಬೇರೆ</li>
-<li page="">ಭಾಷಾ ವಿಚಾರ</li>
-<li page="">ಭಾಷೆಗಳ ವಿಲಕ್ಷಣ ಗತಿ </li>
-<li page="">ಭಾಷೆ ಮತ್ತು ಅವಯವಗಳು </li>
-<li page="">'ಕ್ಷ' ಮತ್ತು 'ಜ್ಞ'</li>
-<li page="">'ಭಗ'-ವತ್ </li>
-<li page="">ಸ್ಮಿತ ಪೂರ್ವಾಭಿಭಾಷಿ ಚ </li>
-<li page="">'ರಾಮ' ಶಬ್ಬದ ಬಗ್ಗೆ ವಿಚಾರಲಹರಿ </li>
-<li page="">ಸಂಸ್ಕೃತಿ, ಸಂಸ್ಕಾರ, ಸಂಸ್ಕೃತ</li>
+<li page="0001-0001">ಹೊಸಗನ್ನಡದ ಹಿರಿಯರು ಮತ್ತು ಕೃತಿ-ಚಿಂತನೆ </li>
+<li page="0001-0001">ಗೋವಿಂದ ಪೈಗಳೊಂದಿಗೆ </li>
+<li page="0001-0001">ಬೇಂದ್ರೆ ಅಂದ್ರೆ </li>
+<li page="0001-0001">ಪೊಳಲಿ ಶೀನಪ್ಪ ಹೆಗ್ಗಡೆ </li>
+<li page="0001-0001">ಶಿವರಾಮ ಕಾರಂತ 'ಪ್ರಪಂಚ' </li>
+<li page="0001-0001">ಕಾದಂಬರಿ ಯುಗಪ್ರವರ್ತಕ, ಅ.ನ.ಕೃ. </li>
+<li page="0001-0001">ಸಾರಸ್ವತಲೋಕದ ಸಲಗ - ಶಂ. ಬಾ. </li>
+<li page="0001-0001">ಸಮನ್ವಯದ ಉಪಾಸಕ ಗೋಕಾಕರು </li>
+<li page="0001-0001">ಅಡಿಗರ ಮಾನವ ಕಾಳಜಿ</li>
+<li page="0001-0001">ಬಿ. ಎಚ್. ಶ್ರೀಧರರು</li>
+<li page="0001-0001">ನಾ ಕಂಡ ಮೊಹರೆಯವರು</li>
+<li page="0001-0001">ಗುರುವರ್ಯ ಹ. ರಾ. ಪುರೋಹಿತರು </li>
+<li page="0001-0001">ಬುರ್ಲಿ ಬಿಂದುಮಾಧವರು </li>
+<li page="0001-0001">ಕನಸುಗಾರ ಜಿ ಬಿ ಜೋಶಿ  </li>
+<li page="0001-0001">ಮಿತ್ರ ದ ಬಾ ಕುಲಕರ್ಣಿ  </li>
+<li page="0001-0001">ಕ. ದಾಸಭಟ್ಟರು </li>
+<li page="0001-0001">ಹುಕ್ಕೇರಿ ಬಾಳಪ್ಪನವರು </li>
+<li page="0001-0001">ಹೆಮಂತಗಾನದ ಬಲ್ಲಾಳರು </li>
+<li page="0001-0001">ಕನ್ನಡ ಪತ್ರಿಕೋದ್ಯೋಗ </li>
+<li page="0001-0001">ಪತ್ರಿಕೋದ್ಯಮಿ 'ಪಾ.ವೆಂ.' ವಿಚಾರಧಾರೆ</li>
+<li page="0001-0001">ಒಂದಿಷ್ಟು ಪ್ರಾಚೀನ ಪ್ರಮೇಯಗಳು </li>
+<li page="0001-0001">ಹಳಗನ್ನಡ ಸಾಹಿತ್ಯ</li>
+<li page="0001-0001">ಗಂಗಾಧರಂ ಶಾಸನ </li>
+<li page="0001-0001">ಕವಿಸಮಯ ವಿಲಾಸಂ </li>
+<li page="0001-0001">ನೇಮಿಚಂದ್ರನ ಒಂದು ಪದ್ಯ </li>
+<li page="0001-0001">ಒಂದು ಅಪೂರ್ವ ಷಟ್ಟದಿ </li>
+<li page="0001-0001">ಕುಮಾರವ್ಯಾಸ - ಕೆಲ ಬಿಡಿ ಆಲೋಚನೆಗಳು </li>
+<li page="0001-0001">ಲಕ್ಷ್ಮೀಶನ ಸ್ಥಳ ಸಮಸ್ಯೆ</li>
+<li page="0001-0001">ಸಂಸ್ಕೃತ ಸಾಹಿತ್ಯ </li>
+<li page="0001-0001">ಸಂಸ್ಕೃತ ಮುಕ್ತಕ </li>
+<li page="0001-0001">ಅಮರುಕನ ಶೃಂಗಾರ ಸೌರಭ </li>
+<li page="0001-0001">ಸಂಸ್ಕೃತದಲ್ಲಿ ಪ್ರಣಯ ವ್ಯಾಪಾರ </li>
+<li page="0001-0001">ವೆಂಕಟಾಧ್ವರಿ ಕಂಡ ದಕ್ಷಿಣ ಭಾರತ </li>
+<li page="0001-0001">ಈ ನ್ಯಾಯಗಳೇ ಬೇರೆ</li>
+<li page="0001-0001">ಭಾಷಾ ವಿಚಾರ</li>
+<li page="0001-0001">ಭಾಷೆಗಳ ವಿಲಕ್ಷಣ ಗತಿ </li>
+<li page="0001-0001">ಭಾಷೆ ಮತ್ತು ಅವಯವಗಳು </li>
+<li page="0001-0001">'ಕ್ಷ' ಮತ್ತು 'ಜ್ಞ'</li>
+<li page="0001-0001">'ಭಗ'-ವತ್ </li>
+<li page="0001-0001">ಸ್ಮಿತ ಪೂರ್ವಾಭಿಭಾಷಿ ಚ </li>
+<li page="0001-0001">'ರಾಮ' ಶಬ್ಬದ ಬಗ್ಗೆ ವಿಚಾರಲಹರಿ </li>
+<li page="0001-0001">ಸಂಸ್ಕೃತಿ, ಸಂಸ್ಕಾರ, ಸಂಸ್ಕೃತ</li>
 </ol>
 </div>
