--- a/application/views/flat/3-Books/015.xhtml
+++ b/application/views/flat/3-Books/015.xhtml
@@ -1,62 +1,62 @@
 ﻿<div data-bcode="015">
 	<h1 class="title" data-language="kannada">ಇವರೇ ಲಾಂಗೂಲಾಚಾರ್ಯರು !</h1>
 	<ol>
-<li page="">ಕಳಾಪೂರ್ಣ ಆಯುಷ್ಕರ್ಮಶಾಲಾ</li>
-<li page="">ಕಳ್ಳನ ಹೆಜ್ಜೆ ಮತ್ತು ಈಶಸಂಕಲ್ಪ</li>
-<li page="">ಕಳೆದುಹೋದ ಪ್ರವಾಸಾನಂದ </li>
-<li page="">ಕಿಂ ಕರ್ತವ್ಯ......?</li>
-<li page="">ಕುರಿನಾಡಿನಲ್ಲಿ ಕಲಿಗಾಲ </li>
-<li page="">ಕೂಷ್ಮಾಂಡ ವಿಜಯಂ</li>
-<li page="">ಕೊಡೆಯಂಬರ್ ಆತಪತ್ರವನ್ </li>
-<li page="">ಕ್ಯೂ ಗಾಂಧಿ ಮತ್ತು ನಾನು ! </li>
-<li page="">ಕ್ಷೌರಚಿಂತನೆ </li>
-<li page="">ಗಾರ್ದಭೋಪಾಖ್ಯಾನಂ </li>
-<li page="">ಒಂದು ಗಣಿತ ಸಮಸ್ಯೆ </li>
-<li page="">ಒಂದು ಕಪ್ ಚಹಾ </li>
-<li page="">ಎಷ್ಟು ಕರ್ನಾಟಕ ? </li>
-<li page="">ಉಪಕಾರ ಮಾಡಿ ನೋಡಿ ! </li>
-<li page="">ಈರುಳ್ಳಿ ಮಹಿಮೆ </li>
-<li page="">ಇರಬೇಕು ನಿಂದಕರು </li>
-<li page="">ಇಡಲಿ ಶಾಸ್ತ್ರ </li>
-<li page="">'ಇಜಂ' ವಿರೋಧಿ 'ಜಂ' </li>
-<li page="">ಅಭಿಮಾನ ಕಾಡಿತ್ತು ನೋಡಾ ! </li>
-<li page="">ಅತ್ಯಂತ ಶಾಸ್ತ್ರಿಗಳು </li>
-<li page="">ಗೊಣಗಿ ಗೊಣಗಿ ಕ್ರಾಂತಿ ತಪ್ಪಿಸಿರಿ </li>
-<li page="">ಗೋಹತ್ಯೆ ಮಾಡಿರಿ </li>
-<li page="">ಜೀವನ ವ್ಯಾಪಾರ </li>
-<li page="">ಟಪಾಲು ಸಂಪು ಮತ್ತು ಆಚಾರ್ಯರರು </li>
-<li page="">"ನಡೆಯುತ್ತದೆ !"  </li>
-<li page="">ನನ್ನ ಮಿತ್ರ ತಾಮಸಾನಂದರು </li>
-<li page="">ನಾಮಾಂತಕರಣ </li>
-<li page="">ನಾರದ ವಿಜಯ</li>
-<li page="">ನಿಮಗೆ ಬೋರಾಗುತ್ತಾ? </li>
-<li page="">ನಿಮ್ಮ ಹೆಸರಿನ ಬಾಲ</li>
-<li page="">ನಿಶ್ಯಬ್ದ ಸಂಘ </li>
-<li page="">ನಿರುದ್ಯೋಗಿಗಳ ಪರಿಷತ್ತು </li>
-<li page="">ನಿವೃತ್ತಾಧಿಕಾರಿಗಳ ವಾನಪ್ರಮಗೆ ಬೋರಾಗುತ್ತಾ? </li>
-<li page="">ನಿಷ್ಕರ್ಮ ಸಿದ್ಧರ ಮಹತಿ </li>
-<li page="">ನೀವು ಹೆಂಡತೀನ ಹೊಡೆಯೋದು ಬಿಟ್ಟಿದ್ದೀರಾ? </li>
-<li page="">ಪತಿಪೂಜನ - ಲೇಟೆಸ್ಟ್ ಯಜ್ಞ </li>
-<li page="">ಪರಮ ಪುರುಷ ಚಕ್ರ </li>
-<li page="">ಪರೀಕ್ಷಾ ಪರೀಕ್ಷಣಮ್ </li>
-<li page="">ಪಶ್ಚಾತ್ತಾಪದ ಮುದ್ದೆಗಳು </li>
-<li page="">ಪಾಶಜಿಜ್ಞಾಸಾ </li>
-<li page="">ಪಿಡುಗಿಗೆ ನಮಸ್ಕಾರ </li>
-<li page="">ಪ್ರಮೀಳೆಯರ ಪೂರ್ಣ ಸ್ವರಾಜ್ಯ </li>
-<li page="">ಪ್ರಾಮಾಣಿಕರಿಗೇಕೆ ಚುನಾವಣಿ ಭಾಷಣ? </li>
-<li page="">ಬನ್ನಿ ರೆಕಾರ್ಡ್ ಒಡೆಯಿರಿ! </li>
-<li page="">ಬುದ್ಧಿದಾನವೋ ಬಲಸಂವರ್ಧನೆಯೊ? </li>
-<li page="">ಬ್ರಹ್ಮಚಾರಿಗಳ ಶಪಥ </li>
-<li page="">ಭಪ್ಪರೆ ಮೆಣಸಿನಕಾಯಿ! </li>
-<li page="">ಮದುವೆ ಮತ್ತು ಹುಚ್ಚು </li>
-<li page="">ಮಾದರಿ ಮಡದಿ ಬೇಕೆ ? </li>
-<li page="">ಶಂಕು ಸ್ಥಾಪನಾ ನಿಯಂತ್ರಣ ಮಸೂದೆ </li>
-<li page="">ಶಾಸ್ತ್ರಾರ್ಥ ಸಂಜೀವಿನಿ </li>
-<li page="">ಶ್ಮಶ್ರು ಚಿಂತಾರತ್ನಂ </li>
-<li page="">ಸಂಕ್ಷೇಪ ರಾಮಾಯಣಂ </li>
-<li page="">ಸಲಹೆಗಳು - ಅನ್-ಲಿಮಿಟೆಡ್ </li>
-<li page="">ಸವ್ವಾಸೇರು </li>
-<li page="">ಸಹಸ್ರನಾಮ್ನೇ ಪುರುಷಾಯ </li>
-<li page="">ಸೇವಕರೇ ಎಲ್ಲಾ</li>
+<li page="0001-0001">ಕಳಾಪೂರ್ಣ ಆಯುಷ್ಕರ್ಮಶಾಲಾ</li>
+<li page="0001-0001">ಕಳ್ಳನ ಹೆಜ್ಜೆ ಮತ್ತು ಈಶಸಂಕಲ್ಪ</li>
+<li page="0001-0001">ಕಳೆದುಹೋದ ಪ್ರವಾಸಾನಂದ </li>
+<li page="0001-0001">ಕಿಂ ಕರ್ತವ್ಯ......?</li>
+<li page="0001-0001">ಕುರಿನಾಡಿನಲ್ಲಿ ಕಲಿಗಾಲ </li>
+<li page="0001-0001">ಕೂಷ್ಮಾಂಡ ವಿಜಯಂ</li>
+<li page="0001-0001">ಕೊಡೆಯಂಬರ್ ಆತಪತ್ರವನ್ </li>
+<li page="0001-0001">ಕ್ಯೂ ಗಾಂಧಿ ಮತ್ತು ನಾನು ! </li>
+<li page="0001-0001">ಕ್ಷೌರಚಿಂತನೆ </li>
+<li page="0001-0001">ಗಾರ್ದಭೋಪಾಖ್ಯಾನಂ </li>
+<li page="0001-0001">ಒಂದು ಗಣಿತ ಸಮಸ್ಯೆ </li>
+<li page="0001-0001">ಒಂದು ಕಪ್ ಚಹಾ </li>
+<li page="0001-0001">ಎಷ್ಟು ಕರ್ನಾಟಕ ? </li>
+<li page="0001-0001">ಉಪಕಾರ ಮಾಡಿ ನೋಡಿ ! </li>
+<li page="0001-0001">ಈರುಳ್ಳಿ ಮಹಿಮೆ </li>
+<li page="0001-0001">ಇರಬೇಕು ನಿಂದಕರು </li>
+<li page="0001-0001">ಇಡಲಿ ಶಾಸ್ತ್ರ </li>
+<li page="0001-0001">'ಇಜಂ' ವಿರೋಧಿ 'ಜಂ' </li>
+<li page="0001-0001">ಅಭಿಮಾನ ಕಾಡಿತ್ತು ನೋಡಾ ! </li>
+<li page="0001-0001">ಅತ್ಯಂತ ಶಾಸ್ತ್ರಿಗಳು </li>
+<li page="0001-0001">ಗೊಣಗಿ ಗೊಣಗಿ ಕ್ರಾಂತಿ ತಪ್ಪಿಸಿರಿ </li>
+<li page="0001-0001">ಗೋಹತ್ಯೆ ಮಾಡಿರಿ </li>
+<li page="0001-0001">ಜೀವನ ವ್ಯಾಪಾರ </li>
+<li page="0001-0001">ಟಪಾಲು ಸಂಪು ಮತ್ತು ಆಚಾರ್ಯರರು </li>
+<li page="0001-0001">"ನಡೆಯುತ್ತದೆ !"  </li>
+<li page="0001-0001">ನನ್ನ ಮಿತ್ರ ತಾಮಸಾನಂದರು </li>
+<li page="0001-0001">ನಾಮಾಂತಕರಣ </li>
+<li page="0001-0001">ನಾರದ ವಿಜಯ</li>
+<li page="0001-0001">ನಿಮಗೆ ಬೋರಾಗುತ್ತಾ? </li>
+<li page="0001-0001">ನಿಮ್ಮ ಹೆಸರಿನ ಬಾಲ</li>
+<li page="0001-0001">ನಿಶ್ಯಬ್ದ ಸಂಘ </li>
+<li page="0001-0001">ನಿರುದ್ಯೋಗಿಗಳ ಪರಿಷತ್ತು </li>
+<li page="0001-0001">ನಿವೃತ್ತಾಧಿಕಾರಿಗಳ ವಾನಪ್ರಮಗೆ ಬೋರಾಗುತ್ತಾ? </li>
+<li page="0001-0001">ನಿಷ್ಕರ್ಮ ಸಿದ್ಧರ ಮಹತಿ </li>
+<li page="0001-0001">ನೀವು ಹೆಂಡತೀನ ಹೊಡೆಯೋದು ಬಿಟ್ಟಿದ್ದೀರಾ? </li>
+<li page="0001-0001">ಪತಿಪೂಜನ - ಲೇಟೆಸ್ಟ್ ಯಜ್ಞ </li>
+<li page="0001-0001">ಪರಮ ಪುರುಷ ಚಕ್ರ </li>
+<li page="0001-0001">ಪರೀಕ್ಷಾ ಪರೀಕ್ಷಣಮ್ </li>
+<li page="0001-0001">ಪಶ್ಚಾತ್ತಾಪದ ಮುದ್ದೆಗಳು </li>
+<li page="0001-0001">ಪಾಶಜಿಜ್ಞಾಸಾ </li>
+<li page="0001-0001">ಪಿಡುಗಿಗೆ ನಮಸ್ಕಾರ </li>
+<li page="0001-0001">ಪ್ರಮೀಳೆಯರ ಪೂರ್ಣ ಸ್ವರಾಜ್ಯ </li>
+<li page="0001-0001">ಪ್ರಾಮಾಣಿಕರಿಗೇಕೆ ಚುನಾವಣಿ ಭಾಷಣ? </li>
+<li page="0001-0001">ಬನ್ನಿ ರೆಕಾರ್ಡ್ ಒಡೆಯಿರಿ! </li>
+<li page="0001-0001">ಬುದ್ಧಿದಾನವೋ ಬಲಸಂವರ್ಧನೆಯೊ? </li>
+<li page="0001-0001">ಬ್ರಹ್ಮಚಾರಿಗಳ ಶಪಥ </li>
+<li page="0001-0001">ಭಪ್ಪರೆ ಮೆಣಸಿನಕಾಯಿ! </li>
+<li page="0001-0001">ಮದುವೆ ಮತ್ತು ಹುಚ್ಚು </li>
+<li page="0001-0001">ಮಾದರಿ ಮಡದಿ ಬೇಕೆ ? </li>
+<li page="0001-0001">ಶಂಕು ಸ್ಥಾಪನಾ ನಿಯಂತ್ರಣ ಮಸೂದೆ </li>
+<li page="0001-0001">ಶಾಸ್ತ್ರಾರ್ಥ ಸಂಜೀವಿನಿ </li>
+<li page="0001-0001">ಶ್ಮಶ್ರು ಚಿಂತಾರತ್ನಂ </li>
+<li page="0001-0001">ಸಂಕ್ಷೇಪ ರಾಮಾಯಣಂ </li>
+<li page="0001-0001">ಸಲಹೆಗಳು - ಅನ್-ಲಿಮಿಟೆಡ್ </li>
+<li page="0001-0001">ಸವ್ವಾಸೇರು </li>
+<li page="0001-0001">ಸಹಸ್ರನಾಮ್ನೇ ಪುರುಷಾಯ </li>
+<li page="0001-0001">ಸೇವಕರೇ ಎಲ್ಲಾ</li>
 </ol>
 </div>
