--- a/application/views/flat/3-Books/018.xhtml
+++ b/application/views/flat/3-Books/018.xhtml
@@ -1,42 +1,42 @@
 ﻿<div data-bcode="018">
 	<h1 class="title" data-language="kannada">ಪಾ. ವೆಂ. ಆಚಾರ್ಯ ಆಯ್ದ ಹರಟೆಗಳು</h1>
 	<ol>
-<li page="">ಪರಿವಿಡಿ</li>
-<li page="">ಸಂಗೀತ ಮಹಿಮ </li>
-<li page="">ಮಕ್ಷಿಕಧ್ವಂಸಕ ಯಂತ್ರ </li>
-<li page="">ನಿಮ್ಮ ಅಲರ್ಜಿ ಯಾವುದು?</li>
-<li page="">ಚಂದ್ರಲೋಕಕ್ಕೇಕೆ ಹೋಗಬೇಕು ? </li>
-<li page="">ಸಂತೋಷ ಘಾತಕರು </li>
-<li page="">ಶ್ರೀಮನ್ನಾರಾಯಣನ ನಿವೃತ್ತಿ...</li>
-<li page="">ಆನೆಚರ್ಮ </li>
-<li page="">ಮೂಷಕ ಪುರಾಣ</li>
-<li page="">ಯಾರೂ ಕೆಮ್ಮಬಾರದು</li>
-<li page="">ಅಡಿಗಲ್ಲು ಸಮಾರಂಭ </li>
-<li page="">ದೇವರ ಕೆಲಸ </li>
-<li page="">ಕಳೆದುಹೋದ ಚಪ್ಪಲಿ </li>
-<li page="">"ಕಥಕ್ಕಳಿ"ಗೊಂದು ಅವಕಾಶ </li>
-<li page="">ಏಕ ಬತ್ತಿ - ಏಕ ರಾಸ್ತಾ </li>
-<li page="">ಐದು ಸಾಲದು, ಏಳು ಬೇಕು </li>
-<li page="">ಪಾದುಕಾ ಉಪಚಾರ </li>
-<li page="">ಮಾವು ಎಂಬ ಹಣ್ಣು </li>
-<li page="">ಗದ್ದಲ ಮಾಡಿ </li>
-<li page="">ಬೆಣ್ಣೆ ಹಾಕುವುದು </li>
-<li page="">ರಾಜಕೀಯ ಗುಳಿಗೆಗಳು</li>
-<li page="">ಬುದ್ದಿವಂತರು ಯಾರು ? </li>
-<li page="">ಬಿರುದಿಲ್ಲದ ಭಾರತ </li>
-<li page="">ಒಂದು ಪ್ರತ್ಯೇಕ ಸಂದರ್ಶನ </li>
-<li page="">ಕಾಯದೆ ಮತ್ತು ದೊಡ್ಡವರು </li>
-<li page="">ರೋಗಿಗಳು ಯಾಕೆ ಸತ್ತರು ? </li>
-<li page="">ಚುಂಬನದ ರಾದ್ದಾಂತ </li>
-<li page="">ನಿಮ್ಮ ನಾತೆ ಯಾವುದು? </li>
-<li page="">ಹಳದಿ ಪತ್ರಿಕೆಗಳು </li>
-<li page="">ಮಹಿಷ ನೀತಿ ಸುಧಾರಣೆ </li>
-<li page="">ವೇದಾಂತ ಮತ್ತು ಸ್ತ್ರೀಕಲಹ </li>
-<li page="">ಸವತಿ ಮತ್ಸರ </li>
-<li page="">ಬಸ್ಸಿನಲ್ಲಿ ಸ್ವಾತಂತ್ರ್ಯ </li>
-<li page="">ಎರಡನೇ ಮದುವೆ </li>
-<li page="">ಚುನಾವಣೆ ಸ್ವಾರಸ್ಯಗಳು </li>
-<li page="">ಘಾತಕ ಹರ್ಷೋನ್ಮಾದ </li>
-<li page="">ಸುದ್ದಿಸ್ವಾರಸ್ಯ</li>
+<li page="0001-0001">ಪರಿವಿಡಿ</li>
+<li page="0001-0001">ಸಂಗೀತ ಮಹಿಮ </li>
+<li page="0001-0001">ಮಕ್ಷಿಕಧ್ವಂಸಕ ಯಂತ್ರ </li>
+<li page="0001-0001">ನಿಮ್ಮ ಅಲರ್ಜಿ ಯಾವುದು?</li>
+<li page="0001-0001">ಚಂದ್ರಲೋಕಕ್ಕೇಕೆ ಹೋಗಬೇಕು ? </li>
+<li page="0001-0001">ಸಂತೋಷ ಘಾತಕರು </li>
+<li page="0001-0001">ಶ್ರೀಮನ್ನಾರಾಯಣನ ನಿವೃತ್ತಿ...</li>
+<li page="0001-0001">ಆನೆಚರ್ಮ </li>
+<li page="0001-0001">ಮೂಷಕ ಪುರಾಣ</li>
+<li page="0001-0001">ಯಾರೂ ಕೆಮ್ಮಬಾರದು</li>
+<li page="0001-0001">ಅಡಿಗಲ್ಲು ಸಮಾರಂಭ </li>
+<li page="0001-0001">ದೇವರ ಕೆಲಸ </li>
+<li page="0001-0001">ಕಳೆದುಹೋದ ಚಪ್ಪಲಿ </li>
+<li page="0001-0001">"ಕಥಕ್ಕಳಿ"ಗೊಂದು ಅವಕಾಶ </li>
+<li page="0001-0001">ಏಕ ಬತ್ತಿ - ಏಕ ರಾಸ್ತಾ </li>
+<li page="0001-0001">ಐದು ಸಾಲದು, ಏಳು ಬೇಕು </li>
+<li page="0001-0001">ಪಾದುಕಾ ಉಪಚಾರ </li>
+<li page="0001-0001">ಮಾವು ಎಂಬ ಹಣ್ಣು </li>
+<li page="0001-0001">ಗದ್ದಲ ಮಾಡಿ </li>
+<li page="0001-0001">ಬೆಣ್ಣೆ ಹಾಕುವುದು </li>
+<li page="0001-0001">ರಾಜಕೀಯ ಗುಳಿಗೆಗಳು</li>
+<li page="0001-0001">ಬುದ್ದಿವಂತರು ಯಾರು ? </li>
+<li page="0001-0001">ಬಿರುದಿಲ್ಲದ ಭಾರತ </li>
+<li page="0001-0001">ಒಂದು ಪ್ರತ್ಯೇಕ ಸಂದರ್ಶನ </li>
+<li page="0001-0001">ಕಾಯದೆ ಮತ್ತು ದೊಡ್ಡವರು </li>
+<li page="0001-0001">ರೋಗಿಗಳು ಯಾಕೆ ಸತ್ತರು ? </li>
+<li page="0001-0001">ಚುಂಬನದ ರಾದ್ದಾಂತ </li>
+<li page="0001-0001">ನಿಮ್ಮ ನಾತೆ ಯಾವುದು? </li>
+<li page="0001-0001">ಹಳದಿ ಪತ್ರಿಕೆಗಳು </li>
+<li page="0001-0001">ಮಹಿಷ ನೀತಿ ಸುಧಾರಣೆ </li>
+<li page="0001-0001">ವೇದಾಂತ ಮತ್ತು ಸ್ತ್ರೀಕಲಹ </li>
+<li page="0001-0001">ಸವತಿ ಮತ್ಸರ </li>
+<li page="0001-0001">ಬಸ್ಸಿನಲ್ಲಿ ಸ್ವಾತಂತ್ರ್ಯ </li>
+<li page="0001-0001">ಎರಡನೇ ಮದುವೆ </li>
+<li page="0001-0001">ಚುನಾವಣೆ ಸ್ವಾರಸ್ಯಗಳು </li>
+<li page="0001-0001">ಘಾತಕ ಹರ್ಷೋನ್ಮಾದ </li>
+<li page="0001-0001">ಸುದ್ದಿಸ್ವಾರಸ್ಯ</li>
 </ol>
 </div>
