--- a/application/views/flat/3-Books/020.xhtml
+++ b/application/views/flat/3-Books/020.xhtml
@@ -1,7 +1,7 @@
 ﻿<div data-bcode="020">
 	<h1 class="title" data-language="kannada">ಪತ್ರಕರ್ತರ ಆಚಾರ್ಯ ಪಾ. ವೆಂ. ಆಚಾರ್ಯ</h1>
 	<ol>
-<li page=""></li>
+<li page="0001-0001"></li>
 
 </ol>
 </div>
