--- a/application/views/flat/3-Books/021.xhtml
+++ b/application/views/flat/3-Books/021.xhtml
@@ -1,7 +1,7 @@
 ﻿<div data-bcode="021">
 	<h1 class="title" data-language="kannada">ವಾಸನಾ (ನೀಳ್ಗತೆ)</h1>
 	<ol>
-<li page=""></li>
+<li page="0001-0001"></li>
 
 </ol>
 </div>
