--- a/application/views/flat/3-Books/022.xhtml
+++ b/application/views/flat/3-Books/022.xhtml
@@ -1,39 +1,39 @@
 ﻿<div data-bcode="022">
 	<h1 class="title" data-language="kannada">ಉಡುಪಿಯ ಪರಿಸರದಲ್ಲಿ ಪಾವೆಂ ಆಚಾರ್ಯರು</h1>
 	<ol>
-<li page="">ಪರಿವಿಡಿ</li>
-<li page="">ಶ್ರೀಕೃಷ್ಣನಿಗೆ (ಅರ್ಪಣ ಪದ್ಯ)</li>
-<li page="">ಪ್ರಸ್ತಾವನೆ - ಸಂಪಾದಕರಿಂದ</li>
-<li page="">(ಅ) ಶ್ರೀಕೃಷ್ಣ ಮಠದ ಪರಿಸರದಲ್ಲಿ </li>
-<li page="">ಹುಲಿ ಕೊಂದ ಸ್ವಾಮಿಗಳು </li>
-<li page="">ಮಠಾಧಿಪತ್ಯಕ್ಕೆ ಮೇಲಾಟ ಇರಲಿಲ್ಲ </li>
-<li page="">ರಥದಿಂದ ಧುಮುಕಿದ ಸ್ವಾಮಿಗಳು </li>
-<li page="">ಪೇಜಾವರ ಶ್ರೀ ವಿಶ್ವೇಶತೀರ್ಥರು </li>
-<li page="">ಸೋದೆಯ ನೆನಪುಗಳು </li>
-<li page="">ಒಂದು ಕಥೆ ; ಅದರ ವ್ಯಥೆ </li>
-<li page="">(ಆ) ಗಣ್ಯ ವ್ಯಕ್ತಿಗಳ ಸನಿಹದಲ್ಲಿ </li>
-<li page="">ಗೋವಿಂದ ಪೈಗಳೊಂದಿಗೆ </li>
-<li page="">ಶಿವರಾಮ ಕಾರಂತ 'ಪ್ರಪಂಚ' </li>
-<li page="">ಡಾ. ಟಿ. ಮಾಧವ ಪೈ </li>
-<li page="">ಶ್ರೀ ತೋನ್ಸೆ ಅನಂತ ಪೈ </li>
-<li page="">ಶ್ರೀ ಎಂ. ಮಧ್ವರಾಜರು </li>
-<li page="">ಕು. ಶಿ. ಉತ್ಸಾಹದ ಬುಗ್ಗೆ </li>
-<li page="">ಉಡುಪಿಯ ಕೆಲ ಪತ್ರಕರ್ತರು </li>
-<li page="">ಪೊಳಲಿ ಶೀನಪ್ಪ ಹೆಗ್ಗಡೆ ಅವರ ಎರಡು ಪುಸ್ತಕಗಳು</li>
-<li page="">(ಇ) ತುಳು, ಕನ್ನಡ ಶಬ್ದ ವಿಹಾರ </li>
-<li page="">ಸಾಮಾನ್ಯ ತುಳು - ಬ್ರಾಹ್ಮಣ ತುಳು </li>
-<li page="">'ಶ್ರೀ ಭಾಗವತೊ' ಹಾಗೂ 'ಸ್ಟ್' ವಿಚಾರ </li>
-<li page="">ಪುತ್ತೂರು - ಶಬ್ದ ವಿವೇಚನೆ </li>
-<li page="">'ಗುಯ್ಯಲ್' - ಒಂದು ವಿವೇಚನೆ </li>
-<li page="">ಶಿವಳ್ಳಿ ಮತ್ತು ಶಿವರೂಪ </li>
-<li page="">'ಖಾವಂದ' ರಿಂದ ಬಿರ್ಕಡ್ ಚೋತ್' ವರಗೆ</li>
-<li page="">(ಈ) ನೆನಹುಗಳು</li>
-<li page="">ನನ್ನ ಪತಿ - ಶ್ರೀಮತಿ ಲಕ್ಷ್ಮೀಬಾಯಿ ಆಚಾರ್ಯ </li>
-<li page="">ನನ್ನ ಉಡುಪಿಯ ಜೀವನ - (ಪಾ.ವೆಂ.) </li>
-<li page="">ಬದಲಾಗಿದ ಉಡುಪಿ </li>
-<li page="">ಸಮ್ಮೇಳನಾಧ್ಯಕ್ಷರ ಭಾಷಣ</li>
-<li page="">ಅನುಬಂಧಗಳು</li>
-<li page="">ಸಮಗ್ರ ಪಾ.ವೆಂ. ಪ್ರಕಟನ ಯೋಜನೆ </li>
-<li page="">ಪ್ರಮುಖ ಅಂಕಿತ ನಾಮ ಸೂಚಿ</li>
+<li page="0001-0001">ಪರಿವಿಡಿ</li>
+<li page="0001-0001">ಶ್ರೀಕೃಷ್ಣನಿಗೆ (ಅರ್ಪಣ ಪದ್ಯ)</li>
+<li page="0001-0001">ಪ್ರಸ್ತಾವನೆ - ಸಂಪಾದಕರಿಂದ</li>
+<li page="0001-0001">(ಅ) ಶ್ರೀಕೃಷ್ಣ ಮಠದ ಪರಿಸರದಲ್ಲಿ </li>
+<li page="0001-0001">ಹುಲಿ ಕೊಂದ ಸ್ವಾಮಿಗಳು </li>
+<li page="0001-0001">ಮಠಾಧಿಪತ್ಯಕ್ಕೆ ಮೇಲಾಟ ಇರಲಿಲ್ಲ </li>
+<li page="0001-0001">ರಥದಿಂದ ಧುಮುಕಿದ ಸ್ವಾಮಿಗಳು </li>
+<li page="0001-0001">ಪೇಜಾವರ ಶ್ರೀ ವಿಶ್ವೇಶತೀರ್ಥರು </li>
+<li page="0001-0001">ಸೋದೆಯ ನೆನಪುಗಳು </li>
+<li page="0001-0001">ಒಂದು ಕಥೆ ; ಅದರ ವ್ಯಥೆ </li>
+<li page="0001-0001">(ಆ) ಗಣ್ಯ ವ್ಯಕ್ತಿಗಳ ಸನಿಹದಲ್ಲಿ </li>
+<li page="0001-0001">ಗೋವಿಂದ ಪೈಗಳೊಂದಿಗೆ </li>
+<li page="0001-0001">ಶಿವರಾಮ ಕಾರಂತ 'ಪ್ರಪಂಚ' </li>
+<li page="0001-0001">ಡಾ. ಟಿ. ಮಾಧವ ಪೈ </li>
+<li page="0001-0001">ಶ್ರೀ ತೋನ್ಸೆ ಅನಂತ ಪೈ </li>
+<li page="0001-0001">ಶ್ರೀ ಎಂ. ಮಧ್ವರಾಜರು </li>
+<li page="0001-0001">ಕು. ಶಿ. ಉತ್ಸಾಹದ ಬುಗ್ಗೆ </li>
+<li page="0001-0001">ಉಡುಪಿಯ ಕೆಲ ಪತ್ರಕರ್ತರು </li>
+<li page="0001-0001">ಪೊಳಲಿ ಶೀನಪ್ಪ ಹೆಗ್ಗಡೆ ಅವರ ಎರಡು ಪುಸ್ತಕಗಳು</li>
+<li page="0001-0001">(ಇ) ತುಳು, ಕನ್ನಡ ಶಬ್ದ ವಿಹಾರ </li>
+<li page="0001-0001">ಸಾಮಾನ್ಯ ತುಳು - ಬ್ರಾಹ್ಮಣ ತುಳು </li>
+<li page="0001-0001">'ಶ್ರೀ ಭಾಗವತೊ' ಹಾಗೂ 'ಸ್ಟ್' ವಿಚಾರ </li>
+<li page="0001-0001">ಪುತ್ತೂರು - ಶಬ್ದ ವಿವೇಚನೆ </li>
+<li page="0001-0001">'ಗುಯ್ಯಲ್' - ಒಂದು ವಿವೇಚನೆ </li>
+<li page="0001-0001">ಶಿವಳ್ಳಿ ಮತ್ತು ಶಿವರೂಪ </li>
+<li page="0001-0001">'ಖಾವಂದ' ರಿಂದ ಬಿರ್ಕಡ್ ಚೋತ್' ವರಗೆ</li>
+<li page="0001-0001">(ಈ) ನೆನಹುಗಳು</li>
+<li page="0001-0001">ನನ್ನ ಪತಿ - ಶ್ರೀಮತಿ ಲಕ್ಷ್ಮೀಬಾಯಿ ಆಚಾರ್ಯ </li>
+<li page="0001-0001">ನನ್ನ ಉಡುಪಿಯ ಜೀವನ - (ಪಾ.ವೆಂ.) </li>
+<li page="0001-0001">ಬದಲಾಗಿದ ಉಡುಪಿ </li>
+<li page="0001-0001">ಸಮ್ಮೇಳನಾಧ್ಯಕ್ಷರ ಭಾಷಣ</li>
+<li page="0001-0001">ಅನುಬಂಧಗಳು</li>
+<li page="0001-0001">ಸಮಗ್ರ ಪಾ.ವೆಂ. ಪ್ರಕಟನ ಯೋಜನೆ </li>
+<li page="0001-0001">ಪ್ರಮುಖ ಅಂಕಿತ ನಾಮ ಸೂಚಿ</li>
 </ol>
 </div>
