--- a/application/views/flat/3-Books/023.xhtml
+++ b/application/views/flat/3-Books/023.xhtml
@@ -1,20 +1,20 @@
 ﻿<div data-bcode="023">
 	<h1 class="title" data-language="kannada">ರಶಿಯಾದ ರಾಜ್ಯಕ್ರಾಂತಿ</h1>
 	<ol>
-<li page="">ಪರಿವಿಡಿ</li>
-<li page="">ಪೂರ್ವರಂಗ</li>
-<li page=""> ರಶಿಯಾದ ವಿಕಾಸದ ಹೆಗ್ಗುರುತುಗಳು</li>
-<li page=""> ರಶಿಯಾದ ಬಂಡವಲಶಾಹಿಯ ವೈಶಿಷ್ಟ್ಯಗಳು</li>
-<li page=""> ಪ್ರಜೆಗಳೂ ಪಕ್ಷಗಳೂ</li>
-<li page="">ಬಾಲ್ಯೆವಿಕರೂ ಮೆನ್ಯೆವಿಕರೂ</li>
-<li page=""> ಕ್ರಾಂತಿಯ ಪೂರ್ವಯೋಗ: ೧೯೦೫</li>
-<li page="">೧೯೦೫ ಲಾಭ-ನಷ್ಟ</li>
-<li page="">ಯುದ್ಧ - ಜನತೆ-ಝಾರಶಾಹಿ</li>
-<li page=""> ಫೆಬ್ರುವರಿಯ ವಿಪ್ಲವ</li>
-<li page="">ತಾತ್ಪೂರ್ತಿಕ ಸರಕಾರ ಮತ್ತು ಸೋವಿಯೆಟ್ ಘಟಕಗಳ: </li>
-<li page="">ಅಂತಃಪ್ರವಾಹಗಳ ಗಮನ-ಪ್ರತಿಗವನ</li>
-<li page="">ಅಕ್ಟೋಬರ ಕ್ರಾಂತಿ</li>
-<li page="">ಹೋರಾಟ ಮತ್ತು ವಿಜಯ </li>
-<li page="">ಉಳಿದುದು</li>
+<li page="0001-0001">ಪರಿವಿಡಿ</li>
+<li page="0001-0001">ಪೂರ್ವರಂಗ</li>
+<li page="0001-0001"> ರಶಿಯಾದ ವಿಕಾಸದ ಹೆಗ್ಗುರುತುಗಳು</li>
+<li page="0001-0001"> ರಶಿಯಾದ ಬಂಡವಲಶಾಹಿಯ ವೈಶಿಷ್ಟ್ಯಗಳು</li>
+<li page="0001-0001"> ಪ್ರಜೆಗಳೂ ಪಕ್ಷಗಳೂ</li>
+<li page="0001-0001">ಬಾಲ್ಯೆವಿಕರೂ ಮೆನ್ಯೆವಿಕರೂ</li>
+<li page="0001-0001"> ಕ್ರಾಂತಿಯ ಪೂರ್ವಯೋಗ: ೧೯೦೫</li>
+<li page="0001-0001">೧೯೦೫ ಲಾಭ-ನಷ್ಟ</li>
+<li page="0001-0001">ಯುದ್ಧ - ಜನತೆ-ಝಾರಶಾಹಿ</li>
+<li page="0001-0001"> ಫೆಬ್ರುವರಿಯ ವಿಪ್ಲವ</li>
+<li page="0001-0001">ತಾತ್ಪೂರ್ತಿಕ ಸರಕಾರ ಮತ್ತು ಸೋವಿಯೆಟ್ ಘಟಕಗಳ: </li>
+<li page="0001-0001">ಅಂತಃಪ್ರವಾಹಗಳ ಗಮನ-ಪ್ರತಿಗವನ</li>
+<li page="0001-0001">ಅಕ್ಟೋಬರ ಕ್ರಾಂತಿ</li>
+<li page="0001-0001">ಹೋರಾಟ ಮತ್ತು ವಿಜಯ </li>
+<li page="0001-0001">ಉಳಿದುದು</li>
 </ol>
 </div>
