--- a/application/views/flat/3-Books/025.xhtml
+++ b/application/views/flat/3-Books/025.xhtml
@@ -1,27 +1,27 @@
 ﻿<div data-bcode="025">
 	<h1 class="title" data-language="kannada">ಸುಭಾಷಿತ ಚಮತ್ಕಾರ</h1>
 	<ol>
-<li page="">ಪರಿವಿಡಿ</li>
-<li page="">ಸಂಪಾದಕೀಯ - ಶ್ರೀನಿವಾಸ ಹಾವನೂರು </li>
-<li page="">ಮುನ್ನುಡಿ - ಕೆ. ಕೃಷ್ಣಮೂರ್ತಿ </li>
-<li page="">ನಾಲ್ಕುಮಾತು - ಪಾ.ವೆಂ. ಆಚಾರ್ಯ </li>
-<li page="">ಸುಭಾಷಿತ ಚಮತ್ಕಾರ</li>
-<li page="">ವಿಷಯ</li>
-<li page="">ಸರಸ್ವತೀ ಮನೋಹರೀ </li>
-<li page="">ಹರಿಂ ವಂದೇ ಹರಂ ವಂದೇ </li>
-<li page="">ಮನೋಬಲಂ ಬಲಂ </li>
-<li page="">ಧನಮಹಿಮ </li>
-<li page="">ಬಡತನಕೆ ಗುಣವಿಲ್ಲ </li>
-<li page="">ಈ ನಂಟು ಕಗ್ಗಂಟು </li>
-<li page="">ಛೂಬಾಣ </li>
-<li page="">ಸಜ್ಜನ - ದುರ್ಜನ </li>
-<li page="">ಆಳುವವರ ಸ್ವರೂಪ </li>
-<li page="">ಅನ್ಯೋಕ್ತಿ </li>
-<li page="">ಸ್ತುತಿಚಮತ್ಕಾರ</li>
-<li page="">ಬಗೆ ಬಗೆ ನಯ - ನೀತಿ </li>
-<li page="">ವೈರಾಗ್ಯ ಭಾಗ್ಯ</li>
-<li page="">ಸಂದರ್ಭ ಟಿಪ್ಪಣಿಗಳು </li>
-<li page="">ಅಕಾರಾದಿ (ಕನ್ನಡ) </li>
-<li page="">ಅಕಾರಾದಿ (ಸಂಸ್ಕೃತ)</li>
+<li page="0001-0001">ಪರಿವಿಡಿ</li>
+<li page="0001-0001">ಸಂಪಾದಕೀಯ - ಶ್ರೀನಿವಾಸ ಹಾವನೂರು </li>
+<li page="0001-0001">ಮುನ್ನುಡಿ - ಕೆ. ಕೃಷ್ಣಮೂರ್ತಿ </li>
+<li page="0001-0001">ನಾಲ್ಕುಮಾತು - ಪಾ.ವೆಂ. ಆಚಾರ್ಯ </li>
+<li page="0001-0001">ಸುಭಾಷಿತ ಚಮತ್ಕಾರ</li>
+<li page="0001-0001">ವಿಷಯ</li>
+<li page="0001-0001">ಸರಸ್ವತೀ ಮನೋಹರೀ </li>
+<li page="0001-0001">ಹರಿಂ ವಂದೇ ಹರಂ ವಂದೇ </li>
+<li page="0001-0001">ಮನೋಬಲಂ ಬಲಂ </li>
+<li page="0001-0001">ಧನಮಹಿಮ </li>
+<li page="0001-0001">ಬಡತನಕೆ ಗುಣವಿಲ್ಲ </li>
+<li page="0001-0001">ಈ ನಂಟು ಕಗ್ಗಂಟು </li>
+<li page="0001-0001">ಛೂಬಾಣ </li>
+<li page="0001-0001">ಸಜ್ಜನ - ದುರ್ಜನ </li>
+<li page="0001-0001">ಆಳುವವರ ಸ್ವರೂಪ </li>
+<li page="0001-0001">ಅನ್ಯೋಕ್ತಿ </li>
+<li page="0001-0001">ಸ್ತುತಿಚಮತ್ಕಾರ</li>
+<li page="0001-0001">ಬಗೆ ಬಗೆ ನಯ - ನೀತಿ </li>
+<li page="0001-0001">ವೈರಾಗ್ಯ ಭಾಗ್ಯ</li>
+<li page="0001-0001">ಸಂದರ್ಭ ಟಿಪ್ಪಣಿಗಳು </li>
+<li page="0001-0001">ಅಕಾರಾದಿ (ಕನ್ನಡ) </li>
+<li page="0001-0001">ಅಕಾರಾದಿ (ಸಂಸ್ಕೃತ)</li>
 </ol>
 </div>
