--- a/application/views/flat/3-Books/027.xhtml
+++ b/application/views/flat/3-Books/027.xhtml
@@ -1,22 +1,22 @@
 ﻿<div data-bcode="027">
 	<h1 class="title" data-language="kannada">ಬಯ್ಯ ಮಲ್ಲಿಗೆ</h1>
 	<ol>
-<li page="">ಪರಿವಿಡಿ</li>
-<li page="">ಬರೆತಿನಾಯನ ಅರಿಕೆ </li>
-<li page="">ಪ್ರಕಾಶಕೆರ್‌ನ ಪಾತೆರ</li>
-<li page="">ಸತ್ಯೊಗು ಪ್ರಾರ್ತನೆ </li>
-<li page="">ತುಳುನಾಡ್ ದ  ನಿನೆಪು </li>
-<li page="">ರಾಮದೇವೆರೆ ಸತ್ಯ </li>
-<li page="">ಗೋಪಿ</li>
-<li page="">ಅರ್ತ </li>
-<li page="">ಯುಗಾದಿ-ದುರ್ಮತಿ </li>
-<li page="">ಬಡವು </li>
-<li page="">ಕೆಡಿ 1-4 </li>
-<li page="">ಸಂಸ್ಕೃುತೊಡ್ಡು </li>
-<li page="">ಗೌತಮಿ-ಗೌತಮೆ </li>
-<li page="">ಬಿನ್ನಯ </li>
-<li page="">ಎನ್ನ ರಾಮಾಯಣ </li>
-<li page="">ಆಯಿಜಿ ನರಮಾನಿ </li>
-<li page="">ಆಯೆ ಬತ್ತೆ ಉಂಬೈ ಬತ್ತೆ</li>
+<li page="0001-0001">ಪರಿವಿಡಿ</li>
+<li page="0001-0001">ಬರೆತಿನಾಯನ ಅರಿಕೆ </li>
+<li page="0001-0001">ಪ್ರಕಾಶಕೆರ್‌ನ ಪಾತೆರ</li>
+<li page="0001-0001">ಸತ್ಯೊಗು ಪ್ರಾರ್ತನೆ </li>
+<li page="0001-0001">ತುಳುನಾಡ್ ದ  ನಿನೆಪು </li>
+<li page="0001-0001">ರಾಮದೇವೆರೆ ಸತ್ಯ </li>
+<li page="0001-0001">ಗೋಪಿ</li>
+<li page="0001-0001">ಅರ್ತ </li>
+<li page="0001-0001">ಯುಗಾದಿ-ದುರ್ಮತಿ </li>
+<li page="0001-0001">ಬಡವು </li>
+<li page="0001-0001">ಕೆಡಿ 1-4 </li>
+<li page="0001-0001">ಸಂಸ್ಕೃುತೊಡ್ಡು </li>
+<li page="0001-0001">ಗೌತಮಿ-ಗೌತಮೆ </li>
+<li page="0001-0001">ಬಿನ್ನಯ </li>
+<li page="0001-0001">ಎನ್ನ ರಾಮಾಯಣ </li>
+<li page="0001-0001">ಆಯಿಜಿ ನರಮಾನಿ </li>
+<li page="0001-0001">ಆಯೆ ಬತ್ತೆ ಉಂಬೈ ಬತ್ತೆ</li>
 </ol>
 </div>
