--- a/application/views/flat/3-Books/029.xhtml
+++ b/application/views/flat/3-Books/029.xhtml
@@ -1,33 +1,33 @@
 ﻿<div data-bcode="029">
 	<h1 class="title" data-language="kannada">ವಿಪರೀತ</h1>
 	<ol>
-<li page="">“ವಿಪರೀತ'ದ ಅಂತರಂಗ </li>
-<li page="">ಕೋಟ್ಯಧಿಪತಿಯ ಕೋಟಲೆಗಳು </li>
-<li page="">ನರಿ, ಹಾವು ಮತ್ತು ಹೇಡಿ  </li>
-<li page="">ರಾತ್ರಿ ಸಮಸ್ಯೆ </li>
-<li page="">ಕವಿಶೌರ್ಯ ಪ್ರಕರಣಂ  </li>
-<li page="">ವರ್ಗರಹಿತ ವಿಶ್ವವಿದ್ಯಾಲಯ </li>
-<li page="">ನಿಂದಕರಿರಬೇಕಿರಬೇಕು  </li>
-<li page="">ನಾನು ಪವಾಡಗಳನ್ನು ನಂಬುತ್ತೇನೆ </li>
-<li page="">ಕಳಾಪ್ರ ಪೂರ್ಣ ಆಯುಷ್ಕರ್ಮಶಾಲಾ </li>
-<li page="">ಯದ್ವಾತದ್ವಾ ಯೆಂಕಣ್ಣಯ್ಯನವರು </li>
-<li page="">ಹಾಲು ಮತ್ತು ಕೋಲು  </li>
-<li page="">ಈರುಳ್ಳಿ ಮಹಿಮೆ  </li>
-<li page="">ಹಳೇದಾದರೂ ಹೊಸದು  </li>
-<li page="">ದೇವಾಸ್ತೃಪ್ತೃಂತು  </li>
-<li page="">ಸಲಹೆಗಳು ಅನ್-ಲಿಮಿಟೆಡ್ </li>
-<li page="">ನಗ್ನಾ ಪರಾಧ  </li>
-<li page="">ಆತ್ಮಸಾಕ್ಷಿಗೆ ಕೈಪಿಡಿ </li>
-<li page="">ದ್ರೌಪದೀವಸ್ತ್ರಾಪಹರಣಂ </li>
-<li page="">ಮಂತ್ರಿಗಳ ದಿನಚರಿ </li>
-<li page="">ಸೇವಕರೇ ಎಲ್ಲಾ </li>
-<li page="">ಮನುಷ್ಯ ನಗದಿದ್ದರೆ </li>
-<li page="">ನಶ್ಯಂ ವಶ್ಯಕರಂ </li>
-<li page="">ಕ್ಯೂ ವಿಚಾರಲಹರಿ</li>
-<li page="">ದೇವಚರ್ಚೆ </li>
-<li page="">ರಾಜಕೀಯ ಜಾಡ್ಯಗಳು </li>
-<li page="">ಬೆಳಗ್ಗೆ ಏಳುವುದು </li>
-<li page="">ಮದುವೆಯಾದರೂ ಸುಖಪಡುವುದು ಹೇಗೆ ...</li>
+<li page="0001-0001">“ವಿಪರೀತ'ದ ಅಂತರಂಗ </li>
+<li page="0001-0001">ಕೋಟ್ಯಧಿಪತಿಯ ಕೋಟಲೆಗಳು </li>
+<li page="0001-0001">ನರಿ, ಹಾವು ಮತ್ತು ಹೇಡಿ  </li>
+<li page="0001-0001">ರಾತ್ರಿ ಸಮಸ್ಯೆ </li>
+<li page="0001-0001">ಕವಿಶೌರ್ಯ ಪ್ರಕರಣಂ  </li>
+<li page="0001-0001">ವರ್ಗರಹಿತ ವಿಶ್ವವಿದ್ಯಾಲಯ </li>
+<li page="0001-0001">ನಿಂದಕರಿರಬೇಕಿರಬೇಕು  </li>
+<li page="0001-0001">ನಾನು ಪವಾಡಗಳನ್ನು ನಂಬುತ್ತೇನೆ </li>
+<li page="0001-0001">ಕಳಾಪ್ರ ಪೂರ್ಣ ಆಯುಷ್ಕರ್ಮಶಾಲಾ </li>
+<li page="0001-0001">ಯದ್ವಾತದ್ವಾ ಯೆಂಕಣ್ಣಯ್ಯನವರು </li>
+<li page="0001-0001">ಹಾಲು ಮತ್ತು ಕೋಲು  </li>
+<li page="0001-0001">ಈರುಳ್ಳಿ ಮಹಿಮೆ  </li>
+<li page="0001-0001">ಹಳೇದಾದರೂ ಹೊಸದು  </li>
+<li page="0001-0001">ದೇವಾಸ್ತೃಪ್ತೃಂತು  </li>
+<li page="0001-0001">ಸಲಹೆಗಳು ಅನ್-ಲಿಮಿಟೆಡ್ </li>
+<li page="0001-0001">ನಗ್ನಾ ಪರಾಧ  </li>
+<li page="0001-0001">ಆತ್ಮಸಾಕ್ಷಿಗೆ ಕೈಪಿಡಿ </li>
+<li page="0001-0001">ದ್ರೌಪದೀವಸ್ತ್ರಾಪಹರಣಂ </li>
+<li page="0001-0001">ಮಂತ್ರಿಗಳ ದಿನಚರಿ </li>
+<li page="0001-0001">ಸೇವಕರೇ ಎಲ್ಲಾ </li>
+<li page="0001-0001">ಮನುಷ್ಯ ನಗದಿದ್ದರೆ </li>
+<li page="0001-0001">ನಶ್ಯಂ ವಶ್ಯಕರಂ </li>
+<li page="0001-0001">ಕ್ಯೂ ವಿಚಾರಲಹರಿ</li>
+<li page="0001-0001">ದೇವಚರ್ಚೆ </li>
+<li page="0001-0001">ರಾಜಕೀಯ ಜಾಡ್ಯಗಳು </li>
+<li page="0001-0001">ಬೆಳಗ್ಗೆ ಏಳುವುದು </li>
+<li page="0001-0001">ಮದುವೆಯಾದರೂ ಸುಖಪಡುವುದು ಹೇಗೆ ...</li>
 </ol>
 </div>
 
