--- a/application/views/flat/3-Books/030.xhtml
+++ b/application/views/flat/3-Books/030.xhtml
@@ -1,28 +1,28 @@
 ﻿<div data-bcode="030">
 	<h1 class="title" data-language="kannada">ಪ್ರಹಾರ</h1>
 	<ol>
-<li page="">ಪರಿವಿಡಿ</li>
-<li page="">ಶ್ರೀ ಗಣೇಶಾಯ ನಮಃ </li>
-<li page="">ಸ್ವಲ್ಪ ಅವಿವೇಕವಿರಲಿ </li>
-<li page="">ಕೊಡೆಯೆಂಬರ್ ಆತಪತ್ರವನ್ </li>
-<li page="">ಸೀರೆ ಮತ್ತು ಮಹಾಭಾರತ </li>
-<li page="">ಶಬ್ದಚ್ಛಟ ಎಂಬ ರೋಗ </li>
-<li page="">ಹೆಸರಿನಿಂದೇನು ? </li>
-<li page="">ಬಫೆಲೋಲ್ಯಾಂಡ್ </li>
-<li page="">ನನ್ನ ಸಂಶೋಧನೆಗಳು </li>
-<li page="">ಶ್ರೀಮದ್ರಾಮಾಯಣದರ್ಶನಂ </li>
-<li page="">ನಾನು ಕವಿತೆ ಬರೆಯತೊಡಗಿದ್ದು </li>
-<li page="">ಪಿಟೀಲು ಬಾರಿಸಿ ಬೆಳೆ ಹೆಚ್ಚಿಸಿರಿ </li>
-<li page="">ಹೆಂಗಸರನ್ನು ಹೇಗೆ ಅರ್ಥ ಮಾಡಿಕೊಳ್ಳಬೇಕು </li>
-<li page="">ನಾ ಕಂಡ ಕತ್ತೆ </li>
-<li page="">ದೀಪಾವಳಿ ಕಥಾಶ್ರವಣಂ </li>
-<li page="">ಜಲಚಿಕಿತ್ಸಾ ಪ್ರವೀಣ, ಗೌಳಿಗ </li>
-<li page="">ಬುದ್ದಿವಂತರಿಗಾಗಿ ಪಂಚಶೀಲ ಕೈಪಿಡಿ </li>
-<li page="">ಭವಿಷ್ಯ ವಿಕ್ಷೇಪಣಂ </li>
-<li page="">ಸಂಘಂ ಶರಣಂ ಗಚ್ಛಾಮಿ </li>
-<li page="">ಮಾಸ್ತರರಿಗೆ ಮದುವೆ ಬೇಕು</li>
-<li page=""> ಶ್ರೀಮನ್ನಾರಾಯಣನ ನಿವೃತ್ತಿ </li>
-<li page=""> ಬ್ರಹ್ಮ “ಹೂ” ಎಂದ</li>
+<li page="0001-0001">ಪರಿವಿಡಿ</li>
+<li page="0001-0001">ಶ್ರೀ ಗಣೇಶಾಯ ನಮಃ </li>
+<li page="0001-0001">ಸ್ವಲ್ಪ ಅವಿವೇಕವಿರಲಿ </li>
+<li page="0001-0001">ಕೊಡೆಯೆಂಬರ್ ಆತಪತ್ರವನ್ </li>
+<li page="0001-0001">ಸೀರೆ ಮತ್ತು ಮಹಾಭಾರತ </li>
+<li page="0001-0001">ಶಬ್ದಚ್ಛಟ ಎಂಬ ರೋಗ </li>
+<li page="0001-0001">ಹೆಸರಿನಿಂದೇನು ? </li>
+<li page="0001-0001">ಬಫೆಲೋಲ್ಯಾಂಡ್ </li>
+<li page="0001-0001">ನನ್ನ ಸಂಶೋಧನೆಗಳು </li>
+<li page="0001-0001">ಶ್ರೀಮದ್ರಾಮಾಯಣದರ್ಶನಂ </li>
+<li page="0001-0001">ನಾನು ಕವಿತೆ ಬರೆಯತೊಡಗಿದ್ದು </li>
+<li page="0001-0001">ಪಿಟೀಲು ಬಾರಿಸಿ ಬೆಳೆ ಹೆಚ್ಚಿಸಿರಿ </li>
+<li page="0001-0001">ಹೆಂಗಸರನ್ನು ಹೇಗೆ ಅರ್ಥ ಮಾಡಿಕೊಳ್ಳಬೇಕು </li>
+<li page="0001-0001">ನಾ ಕಂಡ ಕತ್ತೆ </li>
+<li page="0001-0001">ದೀಪಾವಳಿ ಕಥಾಶ್ರವಣಂ </li>
+<li page="0001-0001">ಜಲಚಿಕಿತ್ಸಾ ಪ್ರವೀಣ, ಗೌಳಿಗ </li>
+<li page="0001-0001">ಬುದ್ದಿವಂತರಿಗಾಗಿ ಪಂಚಶೀಲ ಕೈಪಿಡಿ </li>
+<li page="0001-0001">ಭವಿಷ್ಯ ವಿಕ್ಷೇಪಣಂ </li>
+<li page="0001-0001">ಸಂಘಂ ಶರಣಂ ಗಚ್ಛಾಮಿ </li>
+<li page="0001-0001">ಮಾಸ್ತರರಿಗೆ ಮದುವೆ ಬೇಕು</li>
+<li page="0001-0001"> ಶ್ರೀಮನ್ನಾರಾಯಣನ ನಿವೃತ್ತಿ </li>
+<li page="0001-0001"> ಬ್ರಹ್ಮ “ಹೂ” ಎಂದ</li>
 </ol>
 </div>
 
