--- a/application/views/flat/3-Books/031.xhtml
+++ b/application/views/flat/3-Books/031.xhtml
@@ -1,21 +1,21 @@
 ﻿<div data-bcode="031">
 	<h1 class="title" data-language="kannada">ಪ್ರಹಾರ</h1>
 	<ol>
-<li page="">ಪರಿವಿಡಿ </li>
-<li page="">ಮೊದಲ ಮಾತು </li>
-<li page="">ಲೇಖಕರ ನುಡಿ </li>
-<li page="">ಜಾತಿ ಪದ್ಧತಿ : ಒಂದು ಐತಿಹಾಸಿಕ ವಿಶ್ಲೇಷಣೆ (೧೯೭೮) </li>
-<li page="">ಹರಿಜನರ ಸಮಸ್ಯೆ-ಕೆಲ ಅನಿಷ್ಟ ಲಕ್ಷಣಗಳು (೧೯೭೩) </li>
-<li page="">ಬ್ರಾಹ್ಮಣರೇನು ಮಾಡಬೇಕು ? (೧೯೮೦) </li>
-<li page="">ಮಾನವ ಪ್ರವೃತ್ತಿ ಮತ್ತು ಮೌಲ್ಯಗಳು (೧೯೮೦) </li>
-<li page="">ಬುದ್ದಿಜೀವಿ, ಸಮಾಜ ಮತ್ತು ಸಾಹಿತ್ಯ </li>
-<li page="">ಬತ್ತಲೆ : ಮಂತ್ರದಲ್ಲಿ, ಮಾಟದಲ್ಲಿ, ಭಕ್ತಿಯಲ್ಲಿ (೧೯೮೬) </li>
-<li page="">ಬತ್ತಲೆ, ಬಟ್ಟೆ ಮತ್ತು ದಲಿತ ಪ್ರಜ್ಞೆ (೧೯೮೬) </li>
-<li page="">ಅಂತಃಪುರದ ಅಂತರಂಗದಲ್ಲಿ (೧೯೮೩) </li>
-<li page="">ಗತಕಾಲದ ಗೀಳು, ಹಾದಿಗೊಂದು ಮುಳ್ಳು (೧೯೮೫) </li>
-<li page="">ಕಾಯ್ದಿಟ್ಟ ಸ್ಥಾನಗಳ ಕೂಟ ಪ್ರಶ್ನೆ (೧೯೭೮) </li>
-<li page="">ನಡೆಯುತ್ತದೆ (೧೯೬೮) </li>
-<li page="">ನನಗೆ ಆಶ್ಚರ್ಯವಾಗುತ್ತದೆ (೧೯೮೬)</li>
+<li page="0001-0001">ಪರಿವಿಡಿ </li>
+<li page="0001-0001">ಮೊದಲ ಮಾತು </li>
+<li page="0001-0001">ಲೇಖಕರ ನುಡಿ </li>
+<li page="0001-0001">ಜಾತಿ ಪದ್ಧತಿ : ಒಂದು ಐತಿಹಾಸಿಕ ವಿಶ್ಲೇಷಣೆ (೧೯೭೮) </li>
+<li page="0001-0001">ಹರಿಜನರ ಸಮಸ್ಯೆ-ಕೆಲ ಅನಿಷ್ಟ ಲಕ್ಷಣಗಳು (೧೯೭೩) </li>
+<li page="0001-0001">ಬ್ರಾಹ್ಮಣರೇನು ಮಾಡಬೇಕು ? (೧೯೮೦) </li>
+<li page="0001-0001">ಮಾನವ ಪ್ರವೃತ್ತಿ ಮತ್ತು ಮೌಲ್ಯಗಳು (೧೯೮೦) </li>
+<li page="0001-0001">ಬುದ್ದಿಜೀವಿ, ಸಮಾಜ ಮತ್ತು ಸಾಹಿತ್ಯ </li>
+<li page="0001-0001">ಬತ್ತಲೆ : ಮಂತ್ರದಲ್ಲಿ, ಮಾಟದಲ್ಲಿ, ಭಕ್ತಿಯಲ್ಲಿ (೧೯೮೬) </li>
+<li page="0001-0001">ಬತ್ತಲೆ, ಬಟ್ಟೆ ಮತ್ತು ದಲಿತ ಪ್ರಜ್ಞೆ (೧೯೮೬) </li>
+<li page="0001-0001">ಅಂತಃಪುರದ ಅಂತರಂಗದಲ್ಲಿ (೧೯೮೩) </li>
+<li page="0001-0001">ಗತಕಾಲದ ಗೀಳು, ಹಾದಿಗೊಂದು ಮುಳ್ಳು (೧೯೮೫) </li>
+<li page="0001-0001">ಕಾಯ್ದಿಟ್ಟ ಸ್ಥಾನಗಳ ಕೂಟ ಪ್ರಶ್ನೆ (೧೯೭೮) </li>
+<li page="0001-0001">ನಡೆಯುತ್ತದೆ (೧೯೬೮) </li>
+<li page="0001-0001">ನನಗೆ ಆಶ್ಚರ್ಯವಾಗುತ್ತದೆ (೧೯೮೬)</li>
 </ol>
 </div>
 
