--- a/application/views/flat/3-Books/001.xhtml
+++ b/application/views/flat/3-Books/001.xhtml
@@ -1,64 +1,64 @@
 <div data-bcode="001">
 	<h1 class="title" data-language="kannada">ವಿಜ್ಞಾನ ವಿಸ್ಮಯ</h1>
 	<ol>
-<li page="0006-0008">ಪರಿವಿಡಿ</li>
-<li page="">ಸಾಮಾನ್ಯ ವಿಜ್ಞಾನ</li>
-<li page="">ಅನಂತಗಳ ತಲೆಬಿಸಿ</li>
-<li page="">'ಶೂನ್ಯ' (0) ಸಂಪಾದನೆ</li>
-<li page="">ಮಾನವನು ಯಂತ್ರಕ್ಕೆ ಆಳಾಗುವನೇ ?</li>
-<li page="">ಖಗೋಳ ವಿಜ್ಞಾನ</li>
-<li page="">ಪ್ರತಿ-ವಿಶ್ವ ಇರಬಹುದೆ ? </li>
-<li page="">ಮಾನವ ಮತ್ತು ಹವಾಮಾನ </li>
-<li page="">ಕಾಲರಾಯನ ಕುಟಿಲತನ </li>
-<li page="">ಮಂಗಳಕ್ಕೆ ಮಾನವ ಯಾತ್ರೆ </li>
-<li page="">ಚಂದ್ರಲೋಕದಲ್ಲಿನ್ನು ಮನುಷ್ಯ ವಸತಿಯೇ ? </li>
-<li page="">ಅನ್ಯಲೋಕಗಳಲ್ಲಿ ಜೀವಿಗಳಿಗಾಗಿ ಶೋಧ</li>
-<li page="">ಯುಗಾದಿಯ ಕಥೆ </li>
-<li page="">ಭೂ-ಭೌತಿಕ ವಿಜ್ಞಾನ</li>
-<li page="">ಮಾನವ ನೀರ್ಮಾನಿಸನಾಗಿದ್ದನೆ ?</li>
-<li page="">ಅಪಾಯಕರ ಮಿತ್ರ-ಮಿಂಚು </li>
-<li page="">ವಿಶ್ವಸೃಷ್ಟಿ ಹೇಗಾಯಿತು ? </li>
-<li page="">ಭೂಮಿಯು ಉಬ್ಬುತ್ತಿದೆ !</li>
-<li page="">ಹವಳದ ಮಹಾಶಿಲ್ಪ </li>
-<li page="">ಸಸ್ಯಲೋಕ</li>
-<li page="">ಸಸ್ಯಗಳಿಗೆ ಸಂಗೀತ ಮೆಚ್ಚುತ್ತದೆಯೇ ?</li>
-<li page="">ಮೇಫ್ಲೈ : ಒಂದು ದಿನದ ಬೆಡಗು</li>
-<li page="">ಪ್ರಾಣಿಲೋಕ</li>
-<li page="">ನಮ್ಮ ರಾಷ್ಟ್ರೀಯ ಹಕ್ಕಿ : ನವಿಲು </li>
-<li page="">ಮಾನವ ಪ್ರಯೋಗ ಪಶುಗಳು</li>
-<li page="">ಬೆಕ್ಕು ಎಷ್ಟು ಜಾಣ ಪ್ರಾಣಿ ? </li>
-<li page="">ಡಿನೋಸಾರ್ ಗಳ ಅದ್ಭುತ ಪ್ರಪಂಚ</li>
-<li page="">ಕಸ್ತೂರಿ</li>
-<li page="">ವೈದ್ಯಕೀಯ</li>
-<li page="">ಆಸ್ಪಿರಿನ್ ನಿರುಪದ್ರವಿಯೇ ?</li>
-<li page="">ಎಕ್ಸ್-ರೇ ತೆಗೆಯುವುದೆಂದರೇನು ? </li>
-<li page="">ಕ್ಯಾನ್ಸರ್‌ ಸಂಶೋಧನೆಯಲ್ಲಿ ಹೊಸ ಹೆಜ್ಜೆಗಳು </li>
-<li page="">ಸಾವನ್ನು ಗೆಲ್ಲುವ ಪುಟ್ಟ ಯಂತ್ರ </li>
-<li page="">ಸಿದ್ದವಾಗಿದೆ ಭೀಕರವಾದ ಹೊಸ ಅಸ್ತ್ರ </li>
-<li page="">ಮಧುಮೇಹ ರೋಗ</li>
-<li page="">ಸ್ವಲ್ಪ ಅಸ್ವಸ್ಥವಾಗಿದೆಯೇ? ಅದು ಶುಭ !</li>
-<li page="">ಶ್ವಸನ ಯಂತ್ರ ಪುಪ್ಫುಸ</li>
-<li page="">ರಕ್ತದ ಗುಂಪಿನ ರಹಸ್ಯ </li>
-<li page="">ಮಲೇರಿಯಾದ ಮೇಲೆ ಸಮರ </li>
-<li page="">ಮಧುಮೇಹವೋ ಅಲ್ಲವೋ ? </li>
-<li page="">ಬಿ.ಸಿ.ಜಿ. ಎಂದರೇನು ? </li>
-<li page="">ನೀವು ಬಲಮಿದುಳಿನವರೋ ? ಎಡಮಿದುಳಿನವರೋ ? </li>
-<li page="">ನಿಮ್ಮ ಜೀವಕಣಗಳ ಮಾಯಾಲೋಕ </li>
-<li page="">ಥರ್ಮೋಗ್ರಾಫ್ : ಅದು ಭೂತ ಭವಿಷ್ಯತ್ ವರ್ತಮಾನಗಳನ್ನು ಕಾಣಬಲ್ಲದು ! </li>
-<li page="">ಎಚ್ಚರಿಕೆ ! ಪೆನಿಸಿಲಿನ್ ! </li>
-<li page="">ಮನೋವಿಜ್ಞಾನ</li>
-<li page="">ಸ್ಮರಣಶಕ್ತಿಯನ್ನು ಹೇಗೆ ಹೆಚ್ಚಿಸಿಕೊಳ್ಳಬೇಕು ? </li>
-<li page="">ಆನ್ವಯಿಕ ವಿಜ್ಞಾನ</li>
-<li page="">ಹೆಲಿಕಾಪ್ಟರಿನ ಜನ್ಮದಾತ ಸಿಕೋಸ್ರ್ಕಿ </li>
-<li page="">ಬಡವರ ರೇಷ್ಮೆ ರೇಯಾನ್ </li>
-<li page="">ಕಾರ್ಬನ್ - ೧೪ರಿಂದ ಕಾಲನಿರ್ಣಯ </li>
-<li page="">'ಚಂದ್ರಬಲ'ದಿಂದ ವಿದ್ಯುಚ್ಛಕ್ತಿ </li>
-<li page="">ವಿಜ್ಞಾನಿಗಳು</li>
-<li page="">ಬ್ರಹ್ಮಗುಪ್ತ : ಭಾರತದ ಮಹಾಗಣಕ </li>
-<li page="">ವಿಜ್ಞಾನದ ಯುಗಪುರುಷ ಕೊಪರ್ನಿಕಸ್ </li>
-<li page="">ಗೆಲಿಲಿಯೋನ ಗಳಿಕೆ </li>
-<li page="">ಡಾ. ಸಿ. ವಿ. ರಾಮನ್ </li>
-<li page="">ಜೆ. ಬಿ. ಎಸ್. ಹ್ಯಾಲ್ಡೇನ್ – ಭಾರತೀಯನಾದ ಬ್ರಿಟಿಷ್ ವಿಜ್ಞಾನಿ </li>
-<li page="">ದಾರ್ಶನಿಕ ವಿಜ್ಞಾನಿ : ಸತ್ಯೇನ್ ಬೋಸ್</li>
+<li page="0001-0001">ಪರಿವಿಡಿ</li>
+<li page="0001-0001">ಸಾಮಾನ್ಯ ವಿಜ್ಞಾನ</li>
+<li page="0001-0001">ಅನಂತಗಳ ತಲೆಬಿಸಿ</li>
+<li page="0001-0001">'ಶೂನ್ಯ' (0) ಸಂಪಾದನೆ</li>
+<li page="0001-0001">ಮಾನವನು ಯಂತ್ರಕ್ಕೆ ಆಳಾಗುವನೇ ?</li>
+<li page="0001-0001">ಖಗೋಳ ವಿಜ್ಞಾನ</li>
+<li page="0001-0001">ಪ್ರತಿ-ವಿಶ್ವ ಇರಬಹುದೆ ? </li>
+<li page="0001-0001">ಮಾನವ ಮತ್ತು ಹವಾಮಾನ </li>
+<li page="0001-0001">ಕಾಲರಾಯನ ಕುಟಿಲತನ </li>
+<li page="0001-0001">ಮಂಗಳಕ್ಕೆ ಮಾನವ ಯಾತ್ರೆ </li>
+<li page="0001-0001">ಚಂದ್ರಲೋಕದಲ್ಲಿನ್ನು ಮನುಷ್ಯ ವಸತಿಯೇ ? </li>
+<li page="0001-0001">ಅನ್ಯಲೋಕಗಳಲ್ಲಿ ಜೀವಿಗಳಿಗಾಗಿ ಶೋಧ</li>
+<li page="0001-0001">ಯುಗಾದಿಯ ಕಥೆ </li>
+<li page="0001-0001">ಭೂ-ಭೌತಿಕ ವಿಜ್ಞಾನ</li>
+<li page="0001-0001">ಮಾನವ ನೀರ್ಮಾನಿಸನಾಗಿದ್ದನೆ ?</li>
+<li page="0001-0001">ಅಪಾಯಕರ ಮಿತ್ರ-ಮಿಂಚು </li>
+<li page="0001-0001">ವಿಶ್ವಸೃಷ್ಟಿ ಹೇಗಾಯಿತು ? </li>
+<li page="0001-0001">ಭೂಮಿಯು ಉಬ್ಬುತ್ತಿದೆ !</li>
+<li page="0001-0001">ಹವಳದ ಮಹಾಶಿಲ್ಪ </li>
+<li page="0001-0001">ಸಸ್ಯಲೋಕ</li>
+<li page="0001-0001">ಸಸ್ಯಗಳಿಗೆ ಸಂಗೀತ ಮೆಚ್ಚುತ್ತದೆಯೇ ?</li>
+<li page="0001-0001">ಮೇಫ್ಲೈ : ಒಂದು ದಿನದ ಬೆಡಗು</li>
+<li page="0001-0001">ಪ್ರಾಣಿಲೋಕ</li>
+<li page="0001-0001">ನಮ್ಮ ರಾಷ್ಟ್ರೀಯ ಹಕ್ಕಿ : ನವಿಲು </li>
+<li page="0001-0001">ಮಾನವ ಪ್ರಯೋಗ ಪಶುಗಳು</li>
+<li page="0001-0001">ಬೆಕ್ಕು ಎಷ್ಟು ಜಾಣ ಪ್ರಾಣಿ ? </li>
+<li page="0001-0001">ಡಿನೋಸಾರ್ ಗಳ ಅದ್ಭುತ ಪ್ರಪಂಚ</li>
+<li page="0001-0001">ಕಸ್ತೂರಿ</li>
+<li page="0001-0001">ವೈದ್ಯಕೀಯ</li>
+<li page="0001-0001">ಆಸ್ಪಿರಿನ್ ನಿರುಪದ್ರವಿಯೇ ?</li>
+<li page="0001-0001">ಎಕ್ಸ್-ರೇ ತೆಗೆಯುವುದೆಂದರೇನು ? </li>
+<li page="0001-0001">ಕ್ಯಾನ್ಸರ್‌ ಸಂಶೋಧನೆಯಲ್ಲಿ ಹೊಸ ಹೆಜ್ಜೆಗಳು </li>
+<li page="0001-0001">ಸಾವನ್ನು ಗೆಲ್ಲುವ ಪುಟ್ಟ ಯಂತ್ರ </li>
+<li page="0001-0001">ಸಿದ್ದವಾಗಿದೆ ಭೀಕರವಾದ ಹೊಸ ಅಸ್ತ್ರ </li>
+<li page="0001-0001">ಮಧುಮೇಹ ರೋಗ</li>
+<li page="0001-0001">ಸ್ವಲ್ಪ ಅಸ್ವಸ್ಥವಾಗಿದೆಯೇ? ಅದು ಶುಭ !</li>
+<li page="0001-0001">ಶ್ವಸನ ಯಂತ್ರ ಪುಪ್ಫುಸ</li>
+<li page="0001-0001">ರಕ್ತದ ಗುಂಪಿನ ರಹಸ್ಯ </li>
+<li page="0001-0001">ಮಲೇರಿಯಾದ ಮೇಲೆ ಸಮರ </li>
+<li page="0001-0001">ಮಧುಮೇಹವೋ ಅಲ್ಲವೋ ? </li>
+<li page="0001-0001">ಬಿ.ಸಿ.ಜಿ. ಎಂದರೇನು ? </li>
+<li page="0001-0001">ನೀವು ಬಲಮಿದುಳಿನವರೋ ? ಎಡಮಿದುಳಿನವರೋ ? </li>
+<li page="0001-0001">ನಿಮ್ಮ ಜೀವಕಣಗಳ ಮಾಯಾಲೋಕ </li>
+<li page="0001-0001">ಥರ್ಮೋಗ್ರಾಫ್ : ಅದು ಭೂತ ಭವಿಷ್ಯತ್ ವರ್ತಮಾನಗಳನ್ನು ಕಾಣಬಲ್ಲದು ! </li>
+<li page="0001-0001">ಎಚ್ಚರಿಕೆ ! ಪೆನಿಸಿಲಿನ್ ! </li>
+<li page="0001-0001">ಮನೋವಿಜ್ಞಾನ</li>
+<li page="0001-0001">ಸ್ಮರಣಶಕ್ತಿಯನ್ನು ಹೇಗೆ ಹೆಚ್ಚಿಸಿಕೊಳ್ಳಬೇಕು ? </li>
+<li page="0001-0001">ಆನ್ವಯಿಕ ವಿಜ್ಞಾನ</li>
+<li page="0001-0001">ಹೆಲಿಕಾಪ್ಟರಿನ ಜನ್ಮದಾತ ಸಿಕೋಸ್ರ್ಕಿ </li>
+<li page="0001-0001">ಬಡವರ ರೇಷ್ಮೆ ರೇಯಾನ್ </li>
+<li page="0001-0001">ಕಾರ್ಬನ್ - ೧೪ರಿಂದ ಕಾಲನಿರ್ಣಯ </li>
+<li page="0001-0001">'ಚಂದ್ರಬಲ'ದಿಂದ ವಿದ್ಯುಚ್ಛಕ್ತಿ </li>
+<li page="0001-0001">ವಿಜ್ಞಾನಿಗಳು</li>
+<li page="0001-0001">ಬ್ರಹ್ಮಗುಪ್ತ : ಭಾರತದ ಮಹಾಗಣಕ </li>
+<li page="0001-0001">ವಿಜ್ಞಾನದ ಯುಗಪುರುಷ ಕೊಪರ್ನಿಕಸ್ </li>
+<li page="0001-0001">ಗೆಲಿಲಿಯೋನ ಗಳಿಕೆ </li>
+<li page="0001-0001">ಡಾ. ಸಿ. ವಿ. ರಾಮನ್ </li>
+<li page="0001-0001">ಜೆ. ಬಿ. ಎಸ್. ಹ್ಯಾಲ್ಡೇನ್ – ಭಾರತೀಯನಾದ ಬ್ರಿಟಿಷ್ ವಿಜ್ಞಾನಿ </li>
+<li page="0001-0001">ದಾರ್ಶನಿಕ ವಿಜ್ಞಾನಿ : ಸತ್ಯೇನ್ ಬೋಸ್</li>
 </ol>
 </div>
