--- a/application/views/flat/3-Books/004.xhtml
+++ b/application/views/flat/3-Books/004.xhtml
@@ -1,7 +1,7 @@
 ﻿<div data-bcode="004">
 	<h1 class="title" data-language="kannada">ಪದಾರ್ಥ ಚಿಂತಾಮಣಿ</h1>
 	<ol>
-<li page=""></li>
+<li page="0001-0001"></li>
 
 </ol>
 </div>
