--- a/application/views/flat/3-Books/006.xhtml
+++ b/application/views/flat/3-Books/006.xhtml
@@ -1,7 +1,7 @@
 ﻿<div data-bcode="006">
 	<h1 class="title" data-language="kannada">ವರ್ಧಮಾನ</h1>
 	<ol>
-<li page=""></li>
+<li page="0001-0001"></li>
 
 </ol>
 </div>
