--- a/application/views/flat/3-Books/012.xhtml
+++ b/application/views/flat/3-Books/012.xhtml
@@ -1,91 +1,91 @@
 ﻿<div data-bcode="012">
 	<h1 class="title" data-language="kannada">ಹೌಸಿಂಗ್ ಕಾಲನಿ</h1>
 	<ol>
-<li page="">ಪರಿವಿಡಿ</li>
-<li page="">ಪಾ.ವೆಂ. ಅವರ ಪಂಚದಶಿ - ಡಾ. ಶ್ರೀನಿವಾಸ ಹಾವನೂರ</li>
-<li page="">ಸಂಪಾದಕರ ನುಡಿ</li>
-<li page="">ಪ್ರಾರಂಭದ ಕಲವು ಕವಿತೆಗಳು </li>
-<li page="">ಕಾವ್ಯ ಸಾಮ್ರಾಜ್ಯ </li>
-<li page="">ಚಿಕ್ಕಂದಿನ ನೆನಹು </li>
-<li page="">ರಣಭೇರಿ 'ನವನೀರದ' ದಿಂದ ಬರೆದವನ ಮಾತು </li>
-<li page="">ಹೂಬುಟ್ಟಿ </li>
-<li page="">ಹೂವಿನ ಹಂಬಲ </li>
-<li page="">ಉದ್ಗಾರ </li>
-<li page="">ಮುರಲಿಯ ಹಾಡು </li>
-<li page="">ಬೆಳಕೆಲ್ಲಿ</li>
-<li page="">ಕವಿತೆಗೆ</li>
-<li page="">ನನ್ನ ಹಾಡು </li>
-<li page="">ಇಪ್ಪತ್ತನೆಯ ಹುಟ್ಟಿದ ದಿನದಂದು</li>
-<li page="">ಜಸದ ಮರುಳು </li>
-<li page="">ಇನಿಯನ ಸ್ವಾಗತ </li>
-<li page="">ಸಂಯುಕ್ತ </li>
-<li page="">ಕರೆ</li>
-<li page="">ಕವಿತೆ- ದಯಿತೆ</li>
-<li page="">ಚುಕ್ಕೆಗಳಿಗೆ</li>
-<li page="">ವಿಮರ್ಶಕ</li>
-<li page="">ಕೊನೆಯ ಹಾಡು </li>
-<li page="">ಏನನೆಣಿಸುತಲಿರುವೆ ? </li>
-<li page="">ರೊಟ್ಟಿಯ ರಾಗ </li>
-<li page="">ಶ್ರೀ ಕೃಷ್ಣನಿಗೆ</li>
-<li page="">ನುಸಿಗೆ </li>
-<li page="">ನಾ ಕವಿಂ ಮಾನವಂ ಮನ್ಯೇ </li>
-<li page="">ಹೊಸ ಕವಿತೆಯನ್ನು ದೂರುವವರಿಗೆ </li>
-<li page="">ಆರೆಂಬರೀಜಗವು ದುಗುಡದರಮನೆಯೆಂದು</li>
-<li page="">ಗುಲಾಬಿ ಹೂವಿಗೆ </li>
-<li page="">ಯುದ್ಧ </li>
-<li page="">ನನ್ನ ಗೋರಿಯ ಮೇಲೆ </li>
-<li page="">ಇದು ಏಕೆ ಹೀಗಾಯ್ತು </li>
-<li page="">ಆಕಾಂಕ್ಷೆಯೊಂದಿಹುದು </li>
-<li page="">ನನ್ನ ಕಾವ್ಯ </li>
-<li page="">ಮಗುವಿಗೆ</li>
-<li page="">ಬಾರೆಂದು ಕರೆದಾಗ </li>
-<li page="">ಒಂದು ಕಾಗದ</li>
-<li page="">ಬಯಕೆಯ ಬೆನ್ನು ಹತ್ತಿ </li>
-<li page="">ಅಮರ ಮಹಾತ್ಮ </li>
-<li page="">ಸತ್ಯದರ್ಶನ </li>
-<li page="">ಗಾತ್ರ - ಚಿತ್ರ </li>
-<li page="">ಉದ್ದೇಶ </li>
-<li page="">ಕವಿ- ವಿಜ್ಞಾನಿಗೆ </li>
-<li page="">ಸುಗ್ಗಿ ಯ ಹಾಡು </li>
-<li page="">ನವನೀರದ</li>
-<li page="">'ಕೆಲವು ಪದ್ಯಗಳು' ಸಂಗ್ರಹದಿಂದ ಎರಡು ಮಾತು </li>
-<li page="">ನಲುವತ್ತರ ನೆರೆಯಲ್ಲಿ </li>
-<li page="">ಉಪೋದ್-ಘಾತ </li>
-<li page="">ಗೋಪಿ</li>
-<li page="">ಅಸಿಧಾರಾವೃತ </li>
-<li page="">ಮೊಸ </li>
-<li page="">ಅನಿಸುತಿದೆ </li>
-<li page="">ವಿಕಾರಿ</li>
-<li page="">ಬದಲಾವಣೆ </li>
-<li page="">ಆತ್ಮಬಾಂಬು</li>
-<li page="">ಹೌಸಿಂಗ್ ಕಾಲನಿ</li>
-<li page="">ಅರಳಿಮರ </li>
-<li page="">ನವ್ಯ</li>
-<li page="">ಕಲೆ</li>
-<li page="">ನೋಣ</li>
-<li page="">ಶಿಲ್ಪಪ್ರಿಯ</li>
-<li page="">ಸತ್ತವರು</li>
-<li page="">ದುರಂತಗಳು</li>
-<li page="">ಅಫಲಿತ</li>
-<li page="">ಕಾಲ</li>
-<li page="">ಗಾಂಧಿಗೆ </li>
-<li page="">ಎರಡು ದಾರಿ</li>
-<li page="">ಸಂಜೆ ಹೊತ್ತು</li>
-<li page="">ಕವಿ ಮತ್ತು ಕೋಗಿಲೆ </li>
-<li page="">ಬಲಿ</li>
-<li page="">ದತ್ತನ ನೆನಪು</li>
-<li page="">ಕೊಡೆ</li>
-<li page="">ದ್ವಾ ಸುಪರ್ಣಾ</li>
-<li page="">ಬಿನ್ನಹ</li>
-<li page="">ಗೀತಾಧ್ಯಾಯ ೧೯</li>
-<li page="">ಯಾಹ್ಯಾ ಖಾನ್ ಹೇಳದೇ ಇದ್ದದ್ದು </li>
-<li page="">ತುರ್ತಿನ ರಾಮಾಯಣ</li>
-<li page="">ಬದುಕಿನ ಬದುಕು</li>
-<li page="">ರಾಮದೇವರ ಸತ್ಯ</li>
-<li page="">ಪೆಂಗೋಪದೇಶ </li>
-<li page="">ಅನುಬಂಧಗಳು : </li>
-<li page="">गोपी-गीता  </li>
-<li page="">ಅಭಿಮತ  ಡಾ. ಸಿದ್ಧಲಿಂಗ ಪಟ್ಟಣಶೆಟ್ಟಿ</li>
-<li page="">ಪದ್ಯಗಳ ಅಕಾರಾದಿ ಸೂಚಿ</li>
+<li page="0001-0001">ಪರಿವಿಡಿ</li>
+<li page="0001-0001">ಪಾ.ವೆಂ. ಅವರ ಪಂಚದಶಿ - ಡಾ. ಶ್ರೀನಿವಾಸ ಹಾವನೂರ</li>
+<li page="0001-0001">ಸಂಪಾದಕರ ನುಡಿ</li>
+<li page="0001-0001">ಪ್ರಾರಂಭದ ಕಲವು ಕವಿತೆಗಳು </li>
+<li page="0001-0001">ಕಾವ್ಯ ಸಾಮ್ರಾಜ್ಯ </li>
+<li page="0001-0001">ಚಿಕ್ಕಂದಿನ ನೆನಹು </li>
+<li page="0001-0001">ರಣಭೇರಿ 'ನವನೀರದ' ದಿಂದ ಬರೆದವನ ಮಾತು </li>
+<li page="0001-0001">ಹೂಬುಟ್ಟಿ </li>
+<li page="0001-0001">ಹೂವಿನ ಹಂಬಲ </li>
+<li page="0001-0001">ಉದ್ಗಾರ </li>
+<li page="0001-0001">ಮುರಲಿಯ ಹಾಡು </li>
+<li page="0001-0001">ಬೆಳಕೆಲ್ಲಿ</li>
+<li page="0001-0001">ಕವಿತೆಗೆ</li>
+<li page="0001-0001">ನನ್ನ ಹಾಡು </li>
+<li page="0001-0001">ಇಪ್ಪತ್ತನೆಯ ಹುಟ್ಟಿದ ದಿನದಂದು</li>
+<li page="0001-0001">ಜಸದ ಮರುಳು </li>
+<li page="0001-0001">ಇನಿಯನ ಸ್ವಾಗತ </li>
+<li page="0001-0001">ಸಂಯುಕ್ತ </li>
+<li page="0001-0001">ಕರೆ</li>
+<li page="0001-0001">ಕವಿತೆ- ದಯಿತೆ</li>
+<li page="0001-0001">ಚುಕ್ಕೆಗಳಿಗೆ</li>
+<li page="0001-0001">ವಿಮರ್ಶಕ</li>
+<li page="0001-0001">ಕೊನೆಯ ಹಾಡು </li>
+<li page="0001-0001">ಏನನೆಣಿಸುತಲಿರುವೆ ? </li>
+<li page="0001-0001">ರೊಟ್ಟಿಯ ರಾಗ </li>
+<li page="0001-0001">ಶ್ರೀ ಕೃಷ್ಣನಿಗೆ</li>
+<li page="0001-0001">ನುಸಿಗೆ </li>
+<li page="0001-0001">ನಾ ಕವಿಂ ಮಾನವಂ ಮನ್ಯೇ </li>
+<li page="0001-0001">ಹೊಸ ಕವಿತೆಯನ್ನು ದೂರುವವರಿಗೆ </li>
+<li page="0001-0001">ಆರೆಂಬರೀಜಗವು ದುಗುಡದರಮನೆಯೆಂದು</li>
+<li page="0001-0001">ಗುಲಾಬಿ ಹೂವಿಗೆ </li>
+<li page="0001-0001">ಯುದ್ಧ </li>
+<li page="0001-0001">ನನ್ನ ಗೋರಿಯ ಮೇಲೆ </li>
+<li page="0001-0001">ಇದು ಏಕೆ ಹೀಗಾಯ್ತು </li>
+<li page="0001-0001">ಆಕಾಂಕ್ಷೆಯೊಂದಿಹುದು </li>
+<li page="0001-0001">ನನ್ನ ಕಾವ್ಯ </li>
+<li page="0001-0001">ಮಗುವಿಗೆ</li>
+<li page="0001-0001">ಬಾರೆಂದು ಕರೆದಾಗ </li>
+<li page="0001-0001">ಒಂದು ಕಾಗದ</li>
+<li page="0001-0001">ಬಯಕೆಯ ಬೆನ್ನು ಹತ್ತಿ </li>
+<li page="0001-0001">ಅಮರ ಮಹಾತ್ಮ </li>
+<li page="0001-0001">ಸತ್ಯದರ್ಶನ </li>
+<li page="0001-0001">ಗಾತ್ರ - ಚಿತ್ರ </li>
+<li page="0001-0001">ಉದ್ದೇಶ </li>
+<li page="0001-0001">ಕವಿ- ವಿಜ್ಞಾನಿಗೆ </li>
+<li page="0001-0001">ಸುಗ್ಗಿ ಯ ಹಾಡು </li>
+<li page="0001-0001">ನವನೀರದ</li>
+<li page="0001-0001">'ಕೆಲವು ಪದ್ಯಗಳು' ಸಂಗ್ರಹದಿಂದ ಎರಡು ಮಾತು </li>
+<li page="0001-0001">ನಲುವತ್ತರ ನೆರೆಯಲ್ಲಿ </li>
+<li page="0001-0001">ಉಪೋದ್-ಘಾತ </li>
+<li page="0001-0001">ಗೋಪಿ</li>
+<li page="0001-0001">ಅಸಿಧಾರಾವೃತ </li>
+<li page="0001-0001">ಮೊಸ </li>
+<li page="0001-0001">ಅನಿಸುತಿದೆ </li>
+<li page="0001-0001">ವಿಕಾರಿ</li>
+<li page="0001-0001">ಬದಲಾವಣೆ </li>
+<li page="0001-0001">ಆತ್ಮಬಾಂಬು</li>
+<li page="0001-0001">ಹೌಸಿಂಗ್ ಕಾಲನಿ</li>
+<li page="0001-0001">ಅರಳಿಮರ </li>
+<li page="0001-0001">ನವ್ಯ</li>
+<li page="0001-0001">ಕಲೆ</li>
+<li page="0001-0001">ನೋಣ</li>
+<li page="0001-0001">ಶಿಲ್ಪಪ್ರಿಯ</li>
+<li page="0001-0001">ಸತ್ತವರು</li>
+<li page="0001-0001">ದುರಂತಗಳು</li>
+<li page="0001-0001">ಅಫಲಿತ</li>
+<li page="0001-0001">ಕಾಲ</li>
+<li page="0001-0001">ಗಾಂಧಿಗೆ </li>
+<li page="0001-0001">ಎರಡು ದಾರಿ</li>
+<li page="0001-0001">ಸಂಜೆ ಹೊತ್ತು</li>
+<li page="0001-0001">ಕವಿ ಮತ್ತು ಕೋಗಿಲೆ </li>
+<li page="0001-0001">ಬಲಿ</li>
+<li page="0001-0001">ದತ್ತನ ನೆನಪು</li>
+<li page="0001-0001">ಕೊಡೆ</li>
+<li page="0001-0001">ದ್ವಾ ಸುಪರ್ಣಾ</li>
+<li page="0001-0001">ಬಿನ್ನಹ</li>
+<li page="0001-0001">ಗೀತಾಧ್ಯಾಯ ೧೯</li>
+<li page="0001-0001">ಯಾಹ್ಯಾ ಖಾನ್ ಹೇಳದೇ ಇದ್ದದ್ದು </li>
+<li page="0001-0001">ತುರ್ತಿನ ರಾಮಾಯಣ</li>
+<li page="0001-0001">ಬದುಕಿನ ಬದುಕು</li>
+<li page="0001-0001">ರಾಮದೇವರ ಸತ್ಯ</li>
+<li page="0001-0001">ಪೆಂಗೋಪದೇಶ </li>
+<li page="0001-0001">ಅನುಬಂಧಗಳು : </li>
+<li page="0001-0001">गोपी-गीता  </li>
+<li page="0001-0001">ಅಭಿಮತ  ಡಾ. ಸಿದ್ಧಲಿಂಗ ಪಟ್ಟಣಶೆಟ್ಟಿ</li>
+<li page="0001-0001">ಪದ್ಯಗಳ ಅಕಾರಾದಿ ಸೂಚಿ</li>
 </ol>
 </div>
