--- a/application/views/flat/3-Books/016.xhtml
+++ b/application/views/flat/3-Books/016.xhtml
@@ -2,22 +2,22 @@
 	<h1 class="title" data-language="kannada">ಪಾ. ವೆಂ. ಆಚಾರ್ಯ ಆಯ್ದ ನಗೆಬರಹಗಳು</h1>
 	<ol>
 <li>ಒಳಪುಟಗಳಲ್ಲಿ...</li>
-<li page="">ಬೀದಿಯ ಕಾಮಣ್ಣರು</li>
-<li page="">ಅಮ್ಮಾವ್ರ ಗಂಡಾಯಣ </li>
-<li page="">ಇಮ್ಮಡಿ ತೊಗಲಖ</li>
-<li page="">ಯಾರಿಗಾಗಿ ಬದುಕುತ್ತೇವೆ?</li>
-<li page="">ಸವಿಗನಸುಗಳು </li>
-<li page="">ಸಾಯಲಿಕ್ಕೆ ಪುರುಸೊತ್ತಾಗಲಿಲ್ಲ</li>
-<li page="">ಮಂಗಾಯಣಂ </li>
-<li page="">ಕಪ್ಪು ಕಪ್ಪಂದೇಕೆ ಬೀಳುಗಳೆವಿರಿ? </li>
-<li page="">ಯದ್ವಾತದ್ವಾ ಯೆಂಕಣ್ಣಯ್ಯನವರು </li>
-<li page="">ಹೆಂಗಸರನ್ನು ಹೇಗೆ ಅರ್ಥಮಾಡಿಕೊಳ್ಳಬೇಕು ? </li>
-<li page="">ಶ್ರೀ ಗಣೇಶಾಯ ನಮಃ </li>
-<li page="">ಸೀರೆ ಮತ್ತು ಮಹಾಭಾರತ </li>
-<li page="">ಹಾಸ್ಯ ಮೀಮಾಂಸೆ</li>
-<li page="">ಭಾವೀ ಜಗತ್ತಿನಲ್ಲಿ ಮಹಿಳೆಯರ ಸ್ಥಾನ</li>
-<li page="">ವಾನರಾಯಣ </li>
-<li page="">ಮಶಕ ಪುರಾಣ </li>
-<li page="">ಮದುವೆಯಾದರೂ ಸುಖಪಡುವುದು ಹೇಗೆ?</li>
+<li page="0001-0001">ಬೀದಿಯ ಕಾಮಣ್ಣರು</li>
+<li page="0001-0001">ಅಮ್ಮಾವ್ರ ಗಂಡಾಯಣ </li>
+<li page="0001-0001">ಇಮ್ಮಡಿ ತೊಗಲಖ</li>
+<li page="0001-0001">ಯಾರಿಗಾಗಿ ಬದುಕುತ್ತೇವೆ?</li>
+<li page="0001-0001">ಸವಿಗನಸುಗಳು </li>
+<li page="0001-0001">ಸಾಯಲಿಕ್ಕೆ ಪುರುಸೊತ್ತಾಗಲಿಲ್ಲ</li>
+<li page="0001-0001">ಮಂಗಾಯಣಂ </li>
+<li page="0001-0001">ಕಪ್ಪು ಕಪ್ಪಂದೇಕೆ ಬೀಳುಗಳೆವಿರಿ? </li>
+<li page="0001-0001">ಯದ್ವಾತದ್ವಾ ಯೆಂಕಣ್ಣಯ್ಯನವರು </li>
+<li page="0001-0001">ಹೆಂಗಸರನ್ನು ಹೇಗೆ ಅರ್ಥಮಾಡಿಕೊಳ್ಳಬೇಕು ? </li>
+<li page="0001-0001">ಶ್ರೀ ಗಣೇಶಾಯ ನಮಃ </li>
+<li page="0001-0001">ಸೀರೆ ಮತ್ತು ಮಹಾಭಾರತ </li>
+<li page="0001-0001">ಹಾಸ್ಯ ಮೀಮಾಂಸೆ</li>
+<li page="0001-0001">ಭಾವೀ ಜಗತ್ತಿನಲ್ಲಿ ಮಹಿಳೆಯರ ಸ್ಥಾನ</li>
+<li page="0001-0001">ವಾನರಾಯಣ </li>
+<li page="0001-0001">ಮಶಕ ಪುರಾಣ </li>
+<li page="0001-0001">ಮದುವೆಯಾದರೂ ಸುಖಪಡುವುದು ಹೇಗೆ?</li>
 </ol>
 </div>
