--- a/application/views/flat/3-Books/019.xhtml
+++ b/application/views/flat/3-Books/019.xhtml
@@ -2,31 +2,31 @@
 	<h1 class="title" data-language="kannada">ಓದುಗರೊಡನೆಯ ಹರಟೆಗಳು</h1>
 	<ol>
 <li>ಪರಿವಿಡಿ </li>
-<li page="">ಕನ್ನಡ ಕನ್ನಡ ಇದೆಲ್ಲಾವುಂ ಎನ್ನಡ? </li>
-<li page="">ಕವಿಶೌರ್ಯ ಪ್ರಕರಣಂ </li>
-<li page="">ಕವಿತ್ವ ಲಕ್ಷಣಮ್ </li>
-<li page="">ಕಾಡಿಗೆ ಮತ್ತು ಕಾವ್ಯ </li>
-<li page="">ಕುವೆಂಪು ದರ್ಶನ </li>
-<li page="">ಚಂಡಿಕಾ ಬಲಿ </li>
-<li page="">ನಾಗ-ಪಂಚಮಿ </li>
-<li page="">ನೃಪತುಂಗ ಎಂದರೇನು? </li>
-<li page="">ಪಂಪ ಹಾಗೂ ಪಂಪ್ </li>
-<li page="">ಪುಷ್ಪ ವಿಹಾರ </li>
-<li page="">ಶಕುಂತಲೋಪಾಖ್ಯಾನ </li>
-<li page="">ಶಬ್ದಚ್ಛಟ ಎಂಬ ರೋಗ </li>
-<li page="">ಶಬ್ದಶಕ್ತಿ ಹೆಚ್ಚಿಸಿಕೊಳ್ಳಿ </li>
-<li page="">ಶುಕಪುರಾಣಂ </li>
-<li page="">ಶೇಕ್ ಸ್ಪಿಯರನನ್ನು ಯಾರು ಬರೆದರು? </li>
-<li page="">ಶ್ರೀಮದ್ರಾಮಾಯಣ ದರ್ಶನಂ </li>
-<li page="">ಸಂಶೋಧನೆಯ ಸಮಸ್ಯೆಗಳು </li>
-<li page="">ಸಪ್ತಾಕ್ಷರಿ ಮಂತ್ರ </li>
-<li page="">ಸಕ್ಕರೆ ಗೀತ </li>
-<li page="">ಸಾಹಿತ್ಯದ ಒಂದು ಅದ್ಭುತ</li>
-<li page="">'ಇಸು' ಸಮೃದ್ಧಿ! </li>
-<li page="">ಮಂತ್ರಿಗಳು ಮತ್ತು ಅವರ ವಾಕ್ ಸ್ವಾತಂತ್ರ್ಯ </li>
-<li page="">ಲಾಂಗೂಲ ಪತ್ರಂಗಳ್ </li>
-<li page="">ಜಬ್ಬಲಪುರದ ನರಭಕ್ಷಕ </li>
-<li page="">ಲಾಂಗೂಲ ಪತ್ರಿಕೆಯಿಂದ</li>
+<li page="0001-0001">ಕನ್ನಡ ಕನ್ನಡ ಇದೆಲ್ಲಾವುಂ ಎನ್ನಡ? </li>
+<li page="0001-0001">ಕವಿಶೌರ್ಯ ಪ್ರಕರಣಂ </li>
+<li page="0001-0001">ಕವಿತ್ವ ಲಕ್ಷಣಮ್ </li>
+<li page="0001-0001">ಕಾಡಿಗೆ ಮತ್ತು ಕಾವ್ಯ </li>
+<li page="0001-0001">ಕುವೆಂಪು ದರ್ಶನ </li>
+<li page="0001-0001">ಚಂಡಿಕಾ ಬಲಿ </li>
+<li page="0001-0001">ನಾಗ-ಪಂಚಮಿ </li>
+<li page="0001-0001">ನೃಪತುಂಗ ಎಂದರೇನು? </li>
+<li page="0001-0001">ಪಂಪ ಹಾಗೂ ಪಂಪ್ </li>
+<li page="0001-0001">ಪುಷ್ಪ ವಿಹಾರ </li>
+<li page="0001-0001">ಶಕುಂತಲೋಪಾಖ್ಯಾನ </li>
+<li page="0001-0001">ಶಬ್ದಚ್ಛಟ ಎಂಬ ರೋಗ </li>
+<li page="0001-0001">ಶಬ್ದಶಕ್ತಿ ಹೆಚ್ಚಿಸಿಕೊಳ್ಳಿ </li>
+<li page="0001-0001">ಶುಕಪುರಾಣಂ </li>
+<li page="0001-0001">ಶೇಕ್ ಸ್ಪಿಯರನನ್ನು ಯಾರು ಬರೆದರು? </li>
+<li page="0001-0001">ಶ್ರೀಮದ್ರಾಮಾಯಣ ದರ್ಶನಂ </li>
+<li page="0001-0001">ಸಂಶೋಧನೆಯ ಸಮಸ್ಯೆಗಳು </li>
+<li page="0001-0001">ಸಪ್ತಾಕ್ಷರಿ ಮಂತ್ರ </li>
+<li page="0001-0001">ಸಕ್ಕರೆ ಗೀತ </li>
+<li page="0001-0001">ಸಾಹಿತ್ಯದ ಒಂದು ಅದ್ಭುತ</li>
+<li page="0001-0001">'ಇಸು' ಸಮೃದ್ಧಿ! </li>
+<li page="0001-0001">ಮಂತ್ರಿಗಳು ಮತ್ತು ಅವರ ವಾಕ್ ಸ್ವಾತಂತ್ರ್ಯ </li>
+<li page="0001-0001">ಲಾಂಗೂಲ ಪತ್ರಂಗಳ್ </li>
+<li page="0001-0001">ಜಬ್ಬಲಪುರದ ನರಭಕ್ಷಕ </li>
+<li page="0001-0001">ಲಾಂಗೂಲ ಪತ್ರಿಕೆಯಿಂದ</li>
 </ol>
 </div>
 
