--- a/application/views/flat/3-Books/026.xhtml
+++ b/application/views/flat/3-Books/026.xhtml
@@ -1,7 +1,7 @@
 ﻿<div data-bcode="026">
 	<h1 class="title" data-language="kannada">ಪಾ. ವೆ. ಕಂಡಂತೆ</h1>
 	<ol>
-<li page=""></li>
+<li page="0001-0001"></li>
 
 </ol>
 </div>
