--- a/application/views/flat/3-Books/028.xhtml
+++ b/application/views/flat/3-Books/028.xhtml
@@ -2,28 +2,28 @@
 	<h1 class="title" data-language="kannada">ವಕ್ರ ದೃಷ್ಟಿ</h1>
 	<ol>
 <li>ಪರಿವಿಡಿ </li>
-<li page="">ಹಾಸ್ಯ ಮೀಮಾಂಸೆ</li>
-<li page="">ನಿಮ್ಮ ಅಲರ್ಜಿ ಯಾವುದು ? </li>
-<li page="">ಎಷ್ಟು ಕರ್ನಾಟಕ ? </li>
-<li page="">ಭಾವಿ ಜಗತ್ತಿನಲ್ಲಿ ಮಹಿಳೆಯರ ಸ್ಥಾನ </li>
-<li page="">ಕಪ್ಪುಕಪ್ಪೆಂದೇಕೆ ಬೀಳುಗಳೆವಿರಿ ? </li>
-<li page="">ವಾಲ್ಮೀಕಿಯ ಸಂತಾನ </li>
-<li page="">ಮದುವೆಯಾದರೂ ಸುಖ ಹೇಗೆ ಪಡೆಯಬೇಕು </li>
-<li page="">ದೇವತಾ ಚಟಗಳು </li>
-<li page="">ವಾನರಾಯಣ </li>
-<li page="">ಶಾಸ್ತ್ರ ಮಂಜರಿ </li>
-<li page="">ಶಕುನಿ ಶಂಕಯ್ಯನವರ ಚರಿತ್ರೆ </li>
-<li page="">ವಿಪರೀತ ಧ್ಯಾನಯೋಗಿಯೊಡನೆ ಒಂದು ಗಳಿಗೆ </li>
-<li page="">ತಾಯಿ ಬೇಕಂತೆ ! </li>
-<li page="">ತರಲೆ ತಾರಮ್ಮಯ್ಯನವರು </li>
-<li page="">ತ್ರಿಮೂರ್ತಿಗಳ ವಿಚಾರಣಾ ವೈಖರಿ </li>
-<li page="">ಮಶಕ ಪುರಾಣ </li>
-<li page="">ನಾನು ಪೋಲೀಸ್ ಕಂಪ್ಲೈಂಟ್ ಕೊಟ್ಟೆ </li>
-<li page="">ಸಹಕರಿಸುವ ಸಮಸ್ಯೆ </li>
-<li page="">ಸಾಂಸದಿಕ ನಿದ್ರೆ </li>
-<li page="">ತೊಗಲಖ ಲ್ಯಾಂಡಿನಿಂದೊಂದು ವರದಿ </li>
-<li page="">ಗೋಹತ್ಯೆ ಮಾಡಿರಿ </li>
-<li page="">ಕುರಿನಾಡಿನಲ್ಲಿ ಕಲಿಗಾಲ </li>
-<li page="">ಕ್ರಿಕೆಟ್ ಕಾಮೆಂಟ್ರಿ</li>
+<li page="0001-0001">ಹಾಸ್ಯ ಮೀಮಾಂಸೆ</li>
+<li page="0001-0001">ನಿಮ್ಮ ಅಲರ್ಜಿ ಯಾವುದು ? </li>
+<li page="0001-0001">ಎಷ್ಟು ಕರ್ನಾಟಕ ? </li>
+<li page="0001-0001">ಭಾವಿ ಜಗತ್ತಿನಲ್ಲಿ ಮಹಿಳೆಯರ ಸ್ಥಾನ </li>
+<li page="0001-0001">ಕಪ್ಪುಕಪ್ಪೆಂದೇಕೆ ಬೀಳುಗಳೆವಿರಿ ? </li>
+<li page="0001-0001">ವಾಲ್ಮೀಕಿಯ ಸಂತಾನ </li>
+<li page="0001-0001">ಮದುವೆಯಾದರೂ ಸುಖ ಹೇಗೆ ಪಡೆಯಬೇಕು </li>
+<li page="0001-0001">ದೇವತಾ ಚಟಗಳು </li>
+<li page="0001-0001">ವಾನರಾಯಣ </li>
+<li page="0001-0001">ಶಾಸ್ತ್ರ ಮಂಜರಿ </li>
+<li page="0001-0001">ಶಕುನಿ ಶಂಕಯ್ಯನವರ ಚರಿತ್ರೆ </li>
+<li page="0001-0001">ವಿಪರೀತ ಧ್ಯಾನಯೋಗಿಯೊಡನೆ ಒಂದು ಗಳಿಗೆ </li>
+<li page="0001-0001">ತಾಯಿ ಬೇಕಂತೆ ! </li>
+<li page="0001-0001">ತರಲೆ ತಾರಮ್ಮಯ್ಯನವರು </li>
+<li page="0001-0001">ತ್ರಿಮೂರ್ತಿಗಳ ವಿಚಾರಣಾ ವೈಖರಿ </li>
+<li page="0001-0001">ಮಶಕ ಪುರಾಣ </li>
+<li page="0001-0001">ನಾನು ಪೋಲೀಸ್ ಕಂಪ್ಲೈಂಟ್ ಕೊಟ್ಟೆ </li>
+<li page="0001-0001">ಸಹಕರಿಸುವ ಸಮಸ್ಯೆ </li>
+<li page="0001-0001">ಸಾಂಸದಿಕ ನಿದ್ರೆ </li>
+<li page="0001-0001">ತೊಗಲಖ ಲ್ಯಾಂಡಿನಿಂದೊಂದು ವರದಿ </li>
+<li page="0001-0001">ಗೋಹತ್ಯೆ ಮಾಡಿರಿ </li>
+<li page="0001-0001">ಕುರಿನಾಡಿನಲ್ಲಿ ಕಲಿಗಾಲ </li>
+<li page="0001-0001">ಕ್ರಿಕೆಟ್ ಕಾಮೆಂಟ್ರಿ</li>
 </ol>
 </div>
