--- a/application/views/flat/3-Books/032.xhtml
+++ b/application/views/flat/3-Books/032.xhtml
@@ -1,16 +1,16 @@
 ﻿<div data-bcode="032">
 	<h1 class="title" data-language="kannada">ಪ್ರಪಂಚದ ಪಾಪು ಕಸ್ತೂರಿಯ ಪಾವೆಂ</h1>
 	<ol>
-<li page="">ಪರಿವಿಡಿ</li>
-<li page="">ಮುಂದುವರಿಯುವ ಮೊದಲು</li>
-<li page="">ಅಪರೂಪದ ವಿದ್ವಾನ್ ಜೋಡಿ </li>
-<li page="">ಸಾಹಿತ್ಯ : ಓದು-ಬರಹ</li>
-<li page="">ಪತ್ರಕರ್ತರಾಗಿ (i)</li>
-<li page="">ಪತ್ರಕರ್ತರಾಗಿ (ii)</li>
-<li page="">ವಿದ್ವಾಂಸರು – ಪತ್ರಕರ್ತರು ಕಂಡಂತ </li>
-<li page="">ಸೌಭಾಗ್ಯವತಿಯರು </li>
-<li page="">ಮಾನ ಸನ್ಮಾನಗಳು</li>
-<li page="">ಹುಬ್ಬಳ್ಳಿಯ ಹೆಮ್ಮೆ </li>
-<li page="">ಅನುಬಂಧ</li>
+ಪರಿವಿಡಿ</li>
+ಮುಂದುವರಿಯುವ ಮೊದಲು</li>
+ಅಪರೂಪದ ವಿದ್ವಾನ್ ಜೋಡಿ </li>
+ಸಾಹಿತ್ಯ : ಓದು-ಬರಹ</li>
+ಪತ್ರಕರ್ತರಾಗಿ (i)</li>
+ಪತ್ರಕರ್ತರಾಗಿ (ii)</li>
+ವಿದ್ವಾಂಸರು – ಪತ್ರಕರ್ತರು ಕಂಡಂತ </li>
+ಸೌಭಾಗ್ಯವತಿಯರು </li>
+ಮಾನ ಸನ್ಮಾನಗಳು</li>
+ಹುಬ್ಬಳ್ಳಿಯ ಹೆಮ್ಮೆ </li>
+ಅನುಬಂಧ</li>
 </ol>
 </div>
